Saved everything after unfair LR experiments

--- a/notebooks/out_of_domain_uncertainty_poor_income_LR_10K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_poor_income_LR_10K/Income_2018.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "42add5e6",
+   "id": "9d45d4b0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233575Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "395a8ea5",
+   "id": "64243e59",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233805Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "3ddb4a74",
+   "id": "43167642",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233865Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "683caf40",
+   "id": "a33dbb6a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.277478Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "588bad48",
+   "id": "6c8f6e1d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.277706Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1abdb38a",
+   "id": "e649e948",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:21.684861Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "85a3fa1e",
+   "id": "3422dfdb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:21.694009Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a69ff63d",
+   "id": "efcb7e95",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:22.482933Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8600021",
+   "id": "c2b53417",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0cb616eb",
+   "id": "5d79adb2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:24.606024Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b19d088",
+   "id": "d321d799",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "ea07a5af",
+   "id": "0e95fc13",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:24.632107Z",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c82ccf08",
+   "id": "0a9763d9",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b9a93cc8",
+   "id": "44183d89",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:25.414123Z",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b7110b8e",
+   "id": "14be3c96",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:26.176127Z",
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "af0fd86c",
+   "id": "e06a785a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:36.294376Z",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1e0e62b",
+   "id": "28ec9d1d",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "802791ba",
+   "id": "6a432c7b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:04.449698Z",
@@ -447,7 +447,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ca2716a5",
+   "id": "dc8bebe5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:04.552046Z",
@@ -473,7 +473,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "779f287d",
+   "id": "ae449e73",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.446590Z",
@@ -607,7 +607,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f5a1f9bd",
+   "id": "f5ce5ffb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.523825Z",
@@ -633,7 +633,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "9e954578",
+   "id": "94ac942b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.525122Z",
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0204b615",
+   "id": "bfceb3a9",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aee1d9f3",
+   "id": "48b0bdb7",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -663,8 +663,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "00cfa08a",
+   "execution_count": 14,
+   "id": "f7268dbc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.589772Z",
@@ -680,8 +680,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "ce925d35",
+   "execution_count": 15,
+   "id": "ffffc8ad",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:10.912300Z",
@@ -702,8 +702,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "76cbbe76",
+   "execution_count": 16,
+   "id": "e6f2d5d3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:40:10.165459Z",
@@ -715,7 +715,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 17:04:38 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-11-23 17:51:57 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -725,16 +725,18 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.7]',\n",
+      " 'fair_intervention_params_lst': '[0.0]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': '6052b92f-f6ef-4711-a04c-eb9dd49e06bb'}\n"
+      " 'session_uuid': '6052b92f-f6ef-4711-a04c-eb9dd49e06bb'}\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 17:04:38 experiment_interface.py INFO    : Start dataset preprocessing\n",
+      "2023-11-23 17:51:57 experiment_interface.py INFO    : Start dataset preprocessing\n",
       "INFO:root:Start dataset preprocessing\n"
      ]
     },
@@ -763,7 +765,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 17:04:38 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-11-23 17:51:58 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -779,7 +781,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "660ad65544d8465e817cf91fb7a4affc",
+       "model_id": "74069aadc2d041498f99f12b74dbe8ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -794,7 +796,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 17:04:38 experiment_interface.py INFO    : Start fairness intervention\n",
+      "2023-11-23 17:51:58 experiment_interface.py INFO    : Start fairness intervention\n",
       "INFO:root:Start fairness intervention\n"
      ]
     },
@@ -802,14 +804,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.7\n"
+      "intervention_param:  0.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 17:06:36 experiment_interface.py INFO    : Fairness intervention is completed\n",
+      "2023-11-23 17:53:55 experiment_interface.py INFO    : Fairness intervention is completed\n",
       "INFO:root:Fairness intervention is completed\n"
      ]
     },
@@ -894,8 +896,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.691951</td>\n",
-       "      <td>-0.217634</td>\n",
+       "      <td>0.886574</td>\n",
+       "      <td>0.093572</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25747</th>\n",
@@ -918,8 +920,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.172955</td>\n",
-       "      <td>0.793787</td>\n",
+       "      <td>0.302704</td>\n",
+       "      <td>1.260596</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13795</th>\n",
@@ -990,8 +992,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.562202</td>\n",
-       "      <td>0.171374</td>\n",
+       "      <td>0.756825</td>\n",
+       "      <td>0.482580</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1021,11 +1023,11 @@
        "38923  ...          0.0          0.0          0.0          0.0          0.0   \n",
        "\n",
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
-       "22422          0.0          0.0          0.0   0.691951  -0.217634  \n",
-       "25747          0.0          0.0          0.0   0.172955   0.793787  \n",
+       "22422          0.0          0.0          0.0   0.886574   0.093572  \n",
+       "25747          0.0          0.0          0.0   0.302704   1.260596  \n",
        "13795          0.0          0.0          0.0  -0.929910   0.093572  \n",
        "68724          0.0          0.0          0.0  -0.605538  -2.707286  \n",
-       "38923          0.0          0.0          0.0   0.562202   0.171374  \n",
+       "38923          0.0          0.0          0.0   0.756825   0.482580  \n",
        "\n",
        "[5 rows x 680 columns]"
       ]
@@ -1165,8 +1167,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.367579</td>\n",
-       "      <td>0.015770</td>\n",
+       "      <td>0.432453</td>\n",
+       "      <td>0.093572</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68724</th>\n",
@@ -1214,7 +1216,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-1.513780</td>\n",
-       "      <td>-1.151254</td>\n",
+       "      <td>-1.073452</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1246,9 +1248,9 @@
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
        "22422          0.0          0.0          0.0   1.275821   0.093572  \n",
        "25747          0.0          0.0          0.0   1.535319  -2.396080  \n",
-       "13795          0.0          0.0          0.0   0.367579   0.015770  \n",
+       "13795          0.0          0.0          0.0   0.432453   0.093572  \n",
        "68724          0.0          0.0          0.0  -1.448906  -0.684444  \n",
-       "38923          0.0          0.0          0.0  -1.513780  -1.151254  \n",
+       "38923          0.0          0.0          0.0  -1.513780  -1.073452  \n",
        "\n",
        "[5 rows x 680 columns]"
       ]
@@ -1260,22 +1262,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/11/13, 17:06:36: Tuning LogisticRegression...\n",
-      "2023/11/13, 17:06:50: Tuning for LogisticRegression is finished [F1 score = 0.7360945585818385, Accuracy = 0.7878001357424286]\n"
+      "2023/11/23, 17:53:55: Tuning LogisticRegression...\n",
+      "2023/11/23, 17:54:10: Tuning for LogisticRegression is finished [F1 score = 0.7408541850402696, Accuracy = 0.7912999458314158]\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 17:06:50 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-11-23 17:54:10 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "127efba708bb44cb8274ef63e1e9e03e",
+       "model_id": "70d109a11f6c41c0bb1603a102d1b9f3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1289,7 +1292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3739192ebb114b6695adb2456e5ae367",
+       "model_id": "c06a442182f6436d87820e1e4d6682da",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1321,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29240c9f",
+   "id": "614d0619",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1330,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "31a0c729",
+   "id": "999a3d65",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1351,7 +1354,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "19539984",
+   "id": "bf7a05b4",
    "metadata": {},
    "outputs": [
     {
@@ -1964,7 +1967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e5a46aa",
+   "id": "7ab77356",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1973,7 +1976,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "272970be",
+   "id": "15d2d471",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1994,7 +1997,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20dbe972",
+   "id": "9a8309b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2017,7 +2020,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d296096d",
+   "id": "f35cd444",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -2026,7 +2029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5cd0fd9b",
+   "id": "3c6e320e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2047,7 +2050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0af6164",
+   "id": "fd66397d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2070,7 +2073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9f233b8",
+   "id": "82355950",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -2079,7 +2082,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c086cad",
+   "id": "50e79266",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2100,7 +2103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e5a210f",
+   "id": "07e6a90f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2123,7 +2126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff17592e",
+   "id": "39708cf9",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -2132,7 +2135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8f222355",
+   "id": "dbbf08a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2153,7 +2156,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "42963f3d",
+   "id": "a7154a94",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:49:08.358908Z",
@@ -2182,7 +2185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "805f03b6",
+   "id": "07d183f6",
    "metadata": {},
    "outputs": [],
    "source": []
