--- a/notebooks/out_of_domain_uncertainty_poor_income_LR_2K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_poor_income_LR_2K/Income_2018.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "69dc8d89",
+   "id": "01523961",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233575Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "789833fa",
+   "id": "f04d430e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233805Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "466bdbd0",
+   "id": "2f5e05f0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233865Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "38afd240",
+   "id": "04996bf2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.277478Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "67e1339d",
+   "id": "1c58e1cb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.277706Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fd76a20c",
+   "id": "7bc8e597",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:21.684861Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9070ec2c",
+   "id": "08a1b7cd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:21.694009Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "49d98916",
+   "id": "32e553ee",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:22.482933Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7bfa31b",
+   "id": "81b0adaf",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "64c03f03",
+   "id": "0539b44d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:24.606024Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0da6e4d",
+   "id": "bc573d02",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "0437f83e",
+   "id": "244fcd24",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:24.632107Z",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2d3541b",
+   "id": "826334cd",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9a653ee6",
+   "id": "99038a77",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:25.414123Z",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8c3ddd39",
+   "id": "0ed6c5f5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:26.176127Z",
@@ -275,8 +275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "c68bfa7d",
+   "execution_count": 8,
+   "id": "fbe568a8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:36.294376Z",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "229c81e6",
+   "id": "ee24236c",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -312,8 +312,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "0be3c03a",
+   "execution_count": 9,
+   "id": "39a679b2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:04.449698Z",
@@ -433,7 +433,7 @@
        "4   23   1   1  1760  202    1   1     6    46  45.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,8 +446,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "18557778",
+   "execution_count": 10,
+   "id": "9ec6b33b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:04.552046Z",
@@ -461,7 +461,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,8 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "3ada92d7",
+   "execution_count": 11,
+   "id": "8694d52f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.446590Z",
@@ -593,7 +593,7 @@
        "4   21   1   1  1021  217    1   1     6    33  45.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,8 +606,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "3b769059",
+   "execution_count": 12,
+   "id": "4b741a3a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.523825Z",
@@ -621,7 +621,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,8 +632,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "088d60ff",
+   "execution_count": 13,
+   "id": "235e852d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.525122Z",
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb7e483e",
+   "id": "9c4f649b",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "391d8ada",
+   "id": "99898c3d",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -663,8 +663,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "2d2361c3",
+   "execution_count": 14,
+   "id": "5923022e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.589772Z",
@@ -680,8 +680,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "e02af64f",
+   "execution_count": 15,
+   "id": "1461a12c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:10.912300Z",
@@ -702,8 +702,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "2732c349",
+   "execution_count": 16,
+   "id": "6f1adf52",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:40:10.165459Z",
@@ -715,7 +715,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 18:15:44 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-11-23 17:39:20 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -725,16 +725,18 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.7]',\n",
+      " 'fair_intervention_params_lst': '[0.0]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'a5c86454-358c-4d32-95f8-fa5e1f8033af'}\n"
+      " 'session_uuid': 'a5c86454-358c-4d32-95f8-fa5e1f8033af'}\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 18:15:44 experiment_interface.py INFO    : Start dataset preprocessing\n",
+      "2023-11-23 17:39:20 experiment_interface.py INFO    : Start dataset preprocessing\n",
       "INFO:root:Start dataset preprocessing\n"
      ]
     },
@@ -766,14 +768,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 18:15:44 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-11-23 17:39:21 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5a5ed2d15061480dbb0557a4b27a6ff5",
+       "model_id": "16c57edcee7e4306a2b059b8eafe1a1f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -788,7 +790,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 18:15:44 experiment_interface.py INFO    : Start fairness intervention\n",
+      "2023-11-23 17:39:21 experiment_interface.py INFO    : Start fairness intervention\n",
       "INFO:root:Start fairness intervention\n"
      ]
     },
@@ -796,14 +798,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.7\n"
+      "intervention_param:  0.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 18:16:34 experiment_interface.py INFO    : Fairness intervention is completed\n",
+      "2023-11-23 17:40:12 experiment_interface.py INFO    : Fairness intervention is completed\n",
       "INFO:root:Fairness intervention is completed\n"
      ]
     },
@@ -888,8 +890,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.688521</td>\n",
-       "      <td>-0.272948</td>\n",
+       "      <td>0.884755</td>\n",
+       "      <td>0.040605</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25747</th>\n",
@@ -912,8 +914,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.165229</td>\n",
-       "      <td>0.746099</td>\n",
+       "      <td>0.296052</td>\n",
+       "      <td>1.216428</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13795</th>\n",
@@ -984,8 +986,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.557698</td>\n",
-       "      <td>0.118993</td>\n",
+       "      <td>0.753932</td>\n",
+       "      <td>0.432546</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1015,11 +1017,11 @@
        "38923  ...          0.0          0.0          0.0          0.0          0.0   \n",
        "\n",
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
-       "22422          0.0          0.0          0.0   0.688521  -0.272948  \n",
-       "25747          0.0          0.0          0.0   0.165229   0.746099  \n",
+       "22422          0.0          0.0          0.0   0.884755   0.040605  \n",
+       "25747          0.0          0.0          0.0   0.296052   1.216428  \n",
        "13795          0.0          0.0          0.0  -0.946765   0.040605  \n",
        "68724          0.0          0.0          0.0  -0.619708  -2.781370  \n",
-       "38923          0.0          0.0          0.0   0.557698   0.118993  \n",
+       "38923          0.0          0.0          0.0   0.753932   0.432546  \n",
        "\n",
        "[5 rows x 496 columns]"
       ]
@@ -1159,8 +1161,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.361464</td>\n",
-       "      <td>-0.037783</td>\n",
+       "      <td>0.426875</td>\n",
+       "      <td>0.040605</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68724</th>\n",
@@ -1208,7 +1210,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-1.535468</td>\n",
-       "      <td>-1.213606</td>\n",
+       "      <td>-1.135218</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1240,9 +1242,9 @@
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
        "22422          0.0          0.0          0.0   1.277224   0.040605  \n",
        "25747          0.0          0.0          0.0   1.538869  -2.467817  \n",
-       "13795          0.0          0.0          0.0   0.361464  -0.037783  \n",
+       "13795          0.0          0.0          0.0   0.426875   0.040605  \n",
        "68724          0.0          0.0          0.0  -1.470056  -0.743277  \n",
-       "38923          0.0          0.0          0.0  -1.535468  -1.213606  \n",
+       "38923          0.0          0.0          0.0  -1.535468  -1.135218  \n",
        "\n",
        "[5 rows x 496 columns]"
       ]
@@ -1254,22 +1256,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/11/13, 18:16:34: Tuning LogisticRegression...\n",
-      "2023/11/13, 18:16:37: Tuning for LogisticRegression is finished [F1 score = 0.7095380995232762, Accuracy = 0.7649966308137222]\n"
+      "2023/11/23, 17:40:12: Tuning LogisticRegression...\n",
+      "2023/11/23, 17:40:15: Tuning for LogisticRegression is finished [F1 score = 0.7227637823148542, Accuracy = 0.7749991370681025]\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 18:16:37 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-11-23 17:40:16 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "acd571e32cfb4b2aae669617ce270fac",
+       "model_id": "39cc91b3d3234f24a1930a7c1c3b78ae",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1283,7 +1286,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "109542f2205d4d759f8b9d440ecd8f54",
+       "model_id": "8c0cbb4a6dd9440bba58d8d9fcf0b6b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1315,7 +1318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3091034d",
+   "id": "4f836f8c",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1324,7 +1327,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "37784ee5",
+   "id": "c9f7ab69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1345,7 +1348,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bdee3412",
+   "id": "9a800cc7",
    "metadata": {},
    "outputs": [
     {
@@ -1958,7 +1961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76bc043f",
+   "id": "32139aac",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1967,7 +1970,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2bc7b22",
+   "id": "01349946",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1988,7 +1991,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c1e3ba8",
+   "id": "12606b10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2011,7 +2014,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b89b646",
+   "id": "f877db98",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -2020,7 +2023,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c45f6a72",
+   "id": "43d56af2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2041,7 +2044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf7fc9b7",
+   "id": "e0ac1f72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2064,7 +2067,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "961dd3dd",
+   "id": "d71efb18",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -2073,7 +2076,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ae8dd5f",
+   "id": "058f1e75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2094,7 +2097,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a2e57f4",
+   "id": "94b25495",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2117,7 +2120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c5eed1b",
+   "id": "8d1122f0",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -2126,7 +2129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26ef7940",
+   "id": "5fc78db3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2147,7 +2150,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "93137502",
+   "id": "79cf889e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:49:08.358908Z",
@@ -2176,7 +2179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "390adfac",
+   "id": "40a1f946",
    "metadata": {},
    "outputs": [],
    "source": []
