--- a/notebooks/out_of_domain_uncertainty_poor_income_LR_50K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_poor_income_LR_50K/Income_2018.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "76a8e919",
+   "id": "749a8953",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233575Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "62e31738",
+   "id": "feab3a89",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233805Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1a882ac2",
+   "id": "612d8060",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233865Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "699f8b3f",
+   "id": "46bfbdc2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.277478Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "58c96d8a",
+   "id": "cbec8fe8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.277706Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c2fc88f4",
+   "id": "d70cea69",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:21.684861Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4494d189",
+   "id": "98265a88",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:21.694009Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1883f0c7",
+   "id": "53403e70",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:22.482933Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8a9eee0f",
+   "id": "654fecb1",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "a5278293",
+   "id": "04b910b8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:24.606024Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b6fb316",
+   "id": "268afe2b",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e04aae32",
+   "id": "7acd12e4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:24.632107Z",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50d646c9",
+   "id": "c1f4221b",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a422d734",
+   "id": "b7a138e5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:25.414123Z",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "32ae4578",
+   "id": "906e755a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:26.176127Z",
@@ -275,8 +275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "7c614de4",
+   "execution_count": 8,
+   "id": "da8262c1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:36.294376Z",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "67d7a876",
+   "id": "2dc443a7",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -312,8 +312,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "6664b2f1",
+   "execution_count": 9,
+   "id": "b0f308a0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:04.449698Z",
@@ -433,7 +433,7 @@
        "4   23   1   1  1760  202    1   1     6    46  45.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,8 +446,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "cd6f7893",
+   "execution_count": 10,
+   "id": "97e80c2f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:04.552046Z",
@@ -461,7 +461,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,8 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "c8b47bda",
+   "execution_count": 11,
+   "id": "1efdb6e3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.446590Z",
@@ -593,7 +593,7 @@
        "4   21   1   1  1021  217    1   1     6    33  45.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,8 +606,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "1c5c7d85",
+   "execution_count": 12,
+   "id": "10dd505c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.523825Z",
@@ -621,7 +621,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,8 +632,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "b82244e5",
+   "execution_count": 13,
+   "id": "4d81c164",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.525122Z",
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "278a5282",
+   "id": "b6155702",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b29f5193",
+   "id": "3b7d94dd",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -663,8 +663,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "6cf80f7d",
+   "execution_count": 14,
+   "id": "2cd1d217",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.589772Z",
@@ -680,8 +680,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "4fa0600d",
+   "execution_count": 15,
+   "id": "a9949fff",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:10.912300Z",
@@ -702,8 +702,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "ee13053d",
+   "execution_count": 16,
+   "id": "010357a5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:40:10.165459Z",
@@ -715,7 +715,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-16 15:46:47 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-11-23 18:12:02 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -725,16 +725,18 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.7]',\n",
+      " 'fair_intervention_params_lst': '[0.0]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'b8ad0a86-280d-46fb-8746-d55be289381c'}\n"
+      " 'session_uuid': 'b8ad0a86-280d-46fb-8746-d55be289381c'}\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-16 15:46:47 experiment_interface.py INFO    : Start dataset preprocessing\n",
+      "2023-11-23 18:12:02 experiment_interface.py INFO    : Start dataset preprocessing\n",
       "INFO:root:Start dataset preprocessing\n"
      ]
     },
@@ -763,7 +765,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-16 15:46:48 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-11-23 18:12:04 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -779,7 +781,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "500fee19074c41cabff51514738c613b",
+       "model_id": "f8f7ca35dff44571ae7212c5bbbb5020",
        "version_major": 2,
        "version_minor": 0
       },
@@ -794,7 +796,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-16 15:46:48 experiment_interface.py INFO    : Start fairness intervention\n",
+      "2023-11-23 18:12:04 experiment_interface.py INFO    : Start fairness intervention\n",
       "INFO:root:Start fairness intervention\n"
      ]
     },
@@ -802,14 +804,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.7\n"
+      "intervention_param:  0.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-16 15:52:53 experiment_interface.py INFO    : Fairness intervention is completed\n",
+      "2023-11-23 18:18:09 experiment_interface.py INFO    : Fairness intervention is completed\n",
       "INFO:root:Fairness intervention is completed\n"
      ]
     },
@@ -894,8 +896,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.694396</td>\n",
-       "      <td>-0.206766</td>\n",
+       "      <td>0.890129</td>\n",
+       "      <td>0.101414</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25747</th>\n",
@@ -918,8 +920,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.172444</td>\n",
-       "      <td>0.794819</td>\n",
+       "      <td>0.302932</td>\n",
+       "      <td>1.257089</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13795</th>\n",
@@ -990,8 +992,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.563908</td>\n",
-       "      <td>0.178459</td>\n",
+       "      <td>0.759640</td>\n",
+       "      <td>0.486639</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1021,11 +1023,11 @@
        "38923  ...          0.0          0.0          0.0          0.0          0.0   \n",
        "\n",
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
-       "22422          0.0          0.0          0.0   0.694396  -0.206766  \n",
-       "25747          0.0          0.0          0.0   0.172444   0.794819  \n",
+       "22422          0.0          0.0          0.0   0.890129   0.101414  \n",
+       "25747          0.0          0.0          0.0   0.302932   1.257089  \n",
        "13795          0.0          0.0          0.0  -0.936705   0.101414  \n",
        "68724          0.0          0.0          0.0  -0.610485  -2.672205  \n",
-       "38923          0.0          0.0          0.0   0.563908   0.178459  \n",
+       "38923          0.0          0.0          0.0   0.759640   0.486639  \n",
        "\n",
        "[5 rows x 776 columns]"
       ]
@@ -1165,8 +1167,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.368176</td>\n",
-       "      <td>0.024369</td>\n",
+       "      <td>0.433420</td>\n",
+       "      <td>0.101414</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68724</th>\n",
@@ -1214,7 +1216,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-1.523902</td>\n",
-       "      <td>-1.131305</td>\n",
+       "      <td>-1.054260</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1246,9 +1248,9 @@
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
        "22422          0.0          0.0          0.0   1.281593   0.101414  \n",
        "25747          0.0          0.0          0.0   1.542569  -2.364025  \n",
-       "13795          0.0          0.0          0.0   0.368176   0.024369  \n",
+       "13795          0.0          0.0          0.0   0.433420   0.101414  \n",
        "68724          0.0          0.0          0.0  -1.458657  -0.669036  \n",
-       "38923          0.0          0.0          0.0  -1.523902  -1.131305  \n",
+       "38923          0.0          0.0          0.0  -1.523902  -1.054260  \n",
        "\n",
        "[5 rows x 776 columns]"
       ]
@@ -1260,22 +1262,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/11/16, 15:52:53: Tuning LogisticRegression...\n",
-      "2023/11/16, 15:54:23: Tuning for LogisticRegression is finished [F1 score = 0.7556295614893799, Accuracy = 0.803400073844197]\n"
+      "2023/11/23, 18:18:09: Tuning LogisticRegression...\n",
+      "2023/11/23, 18:19:39: Tuning for LogisticRegression is finished [F1 score = 0.757638477846602, Accuracy = 0.804900082245565]\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-16 15:54:23 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-11-23 18:19:39 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "deead9d63cfe457589caf8756c6a2ad6",
+       "model_id": "7813be428ea34bd192215001303e1720",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1289,7 +1292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a387a5ddff241978276f181d9f54535",
+       "model_id": "d239febf75f44312afc6a17d9743db28",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1321,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d45887a",
+   "id": "14e025d9",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1330,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "bc094b70",
+   "id": "2f1902a8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1351,7 +1354,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "2e0cb6cf",
+   "id": "b3f0a673",
    "metadata": {},
    "outputs": [
     {
@@ -1958,7 +1961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e17d1f7",
+   "id": "aafbba53",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1967,7 +1970,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1a7ea58",
+   "id": "5bbf98e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1988,7 +1991,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e51b52c4",
+   "id": "976d9edf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2011,7 +2014,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2c05a83f",
+   "id": "4351c659",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -2020,7 +2023,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a20e1be9",
+   "id": "7d41b392",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2041,7 +2044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0f0a30a",
+   "id": "43c86dd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2064,7 +2067,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1d4ba469",
+   "id": "eb3b7382",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -2073,7 +2076,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c52a8cdc",
+   "id": "e713f54a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2094,7 +2097,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18438939",
+   "id": "fe9448a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2117,7 +2120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc8e2340",
+   "id": "6a925a6a",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -2126,7 +2129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a8e92b3",
+   "id": "6ae0d98d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2147,7 +2150,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d8e294a7",
+   "id": "07e63c2e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:49:08.358908Z",
@@ -2176,7 +2179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6e754225",
+   "id": "c65f2b5f",
    "metadata": {},
    "outputs": [],
    "source": []
