--- a/notebooks/out_of_domain_uncertainty_poor_income_LR_5K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_poor_income_LR_5K/Income_2018.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "76347987",
+   "id": "26501a81",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233575Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "211b872f",
+   "id": "d33dea86",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233805Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "bcdf6204",
+   "id": "1fdd3195",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233865Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ba0bfa2d",
+   "id": "1ce504d0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.277478Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "66c70ba1",
+   "id": "7bb78a13",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.277706Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "73364ce0",
+   "id": "7478e130",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:21.684861Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b503ca31",
+   "id": "ba7540b6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:21.694009Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "54d0b573",
+   "id": "74d399cd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:22.482933Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb2815f2",
+   "id": "4a5a33c3",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "705a14bc",
+   "id": "a379c299",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:24.606024Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c1ed9ad1",
+   "id": "04ee6baf",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b02d6a23",
+   "id": "0ee72ca9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:24.632107Z",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f78e6186",
+   "id": "f5b719f2",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "0207e397",
+   "id": "1f24f708",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:25.414123Z",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "d0afa617",
+   "id": "c4779c1a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:26.176127Z",
@@ -275,8 +275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "3794fa36",
+   "execution_count": 8,
+   "id": "b11d08c1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:36.294376Z",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6f1762fe",
+   "id": "bbe0e222",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -312,8 +312,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "d681ecd9",
+   "execution_count": 9,
+   "id": "fec6fbb5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:04.449698Z",
@@ -433,7 +433,7 @@
        "4   23   1   1  1760  202    1   1     6    46  45.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,8 +446,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "03c6f34a",
+   "execution_count": 10,
+   "id": "6afd9562",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:04.552046Z",
@@ -461,7 +461,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,8 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "4a2e0008",
+   "execution_count": 11,
+   "id": "b79cf22f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.446590Z",
@@ -593,7 +593,7 @@
        "4   21   1   1  1021  217    1   1     6    33  45.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,8 +606,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "341f5671",
+   "execution_count": 12,
+   "id": "c3aba001",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.523825Z",
@@ -621,7 +621,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,8 +632,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "4c05e9c6",
+   "execution_count": 13,
+   "id": "d4ce0d44",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.525122Z",
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0be8ced5",
+   "id": "7e75e65f",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed023ccd",
+   "id": "c13fcada",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -663,8 +663,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "3180b3e6",
+   "execution_count": 14,
+   "id": "15a9c20f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.589772Z",
@@ -680,8 +680,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "1fd69aff",
+   "execution_count": 15,
+   "id": "4e6f1f26",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:10.912300Z",
@@ -702,8 +702,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "2f4d64a4",
+   "execution_count": 16,
+   "id": "3fdb4c97",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:40:10.165459Z",
@@ -715,7 +715,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 18:17:53 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-11-23 17:40:37 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -725,16 +725,18 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.7]',\n",
+      " 'fair_intervention_params_lst': '[0.0]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': '42346f8e-d48e-43c0-b410-6a70903c4480'}\n"
+      " 'session_uuid': '42346f8e-d48e-43c0-b410-6a70903c4480'}\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 18:17:53 experiment_interface.py INFO    : Start dataset preprocessing\n",
+      "2023-11-23 17:40:37 experiment_interface.py INFO    : Start dataset preprocessing\n",
       "INFO:root:Start dataset preprocessing\n"
      ]
     },
@@ -756,24 +758,30 @@
       "In-domain full_df.shape --  (15000, 9)\n",
       "In-domain init_features_df.shape --  (15000, 10)\n",
       "In-domain number of rows in X_train_val --  5000\n",
-      "In-domain number of rows in X_test --  10000\n",
-      "Out-of-domain 1 init_features_df.shape --  (100000, 10)\n",
-      "Out-of-domain 1 number of rows in X_train_val --  0\n",
-      "Out-of-domain 1 number of rows in X_test --  10000\n"
+      "In-domain number of rows in X_test --  10000\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 18:17:54 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-11-23 17:40:38 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out-of-domain 1 init_features_df.shape --  (100000, 10)\n",
+      "Out-of-domain 1 number of rows in X_train_val --  0\n",
+      "Out-of-domain 1 number of rows in X_test --  10000\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b51bb85679e34c9db4ccfdcdc997c4ed",
+       "model_id": "0a4fe1ed36734ee9a53557eef1f3bb0e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -788,7 +796,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 18:17:54 experiment_interface.py INFO    : Start fairness intervention\n",
+      "2023-11-23 17:40:38 experiment_interface.py INFO    : Start fairness intervention\n",
       "INFO:root:Start fairness intervention\n"
      ]
     },
@@ -796,14 +804,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.7\n"
+      "intervention_param:  0.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 18:19:13 experiment_interface.py INFO    : Fairness intervention is completed\n",
+      "2023-11-23 17:42:00 experiment_interface.py INFO    : Fairness intervention is completed\n",
       "INFO:root:Fairness intervention is completed\n"
      ]
     },
@@ -888,8 +896,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.694912</td>\n",
-       "      <td>-0.217392</td>\n",
+       "      <td>0.889343</td>\n",
+       "      <td>0.089550</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25747</th>\n",
@@ -912,8 +920,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.176427</td>\n",
-       "      <td>0.780171</td>\n",
+       "      <td>0.306048</td>\n",
+       "      <td>1.240585</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13795</th>\n",
@@ -984,8 +992,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.565290</td>\n",
-       "      <td>0.166286</td>\n",
+       "      <td>0.759722</td>\n",
+       "      <td>0.473229</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1015,11 +1023,11 @@
        "38923  ...          0.0          0.0          0.0          0.0          0.0   \n",
        "\n",
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
-       "22422          0.0          0.0          0.0   0.694912  -0.217392  \n",
-       "25747          0.0          0.0          0.0   0.176427   0.780171  \n",
+       "22422          0.0          0.0          0.0   0.889343   0.089550  \n",
+       "25747          0.0          0.0          0.0   0.306048   1.240585  \n",
        "13795          0.0          0.0          0.0  -0.925352   0.089550  \n",
        "68724          0.0          0.0          0.0  -0.601299  -2.672932  \n",
-       "38923          0.0          0.0          0.0   0.565290   0.166286  \n",
+       "38923          0.0          0.0          0.0   0.759722   0.473229  \n",
        "\n",
        "[5 rows x 613 columns]"
       ]
@@ -1159,8 +1167,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.370859</td>\n",
-       "      <td>0.012815</td>\n",
+       "      <td>0.435669</td>\n",
+       "      <td>0.089550</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68724</th>\n",
@@ -1208,7 +1216,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-1.508647</td>\n",
-       "      <td>-1.138219</td>\n",
+       "      <td>-1.061484</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1240,9 +1248,9 @@
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
        "22422          0.0          0.0          0.0   1.278206   0.089550  \n",
        "25747          0.0          0.0          0.0   1.537449  -2.365989  \n",
-       "13795          0.0          0.0          0.0   0.370859   0.012815  \n",
+       "13795          0.0          0.0          0.0   0.435669   0.089550  \n",
        "68724          0.0          0.0          0.0  -1.443836  -0.677806  \n",
-       "38923          0.0          0.0          0.0  -1.508647  -1.138219  \n",
+       "38923          0.0          0.0          0.0  -1.508647  -1.061484  \n",
        "\n",
        "[5 rows x 613 columns]"
       ]
@@ -1254,22 +1262,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/11/13, 18:19:13: Tuning LogisticRegression...\n",
-      "2023/11/13, 18:19:21: Tuning for LogisticRegression is finished [F1 score = 0.7167818297420402, Accuracy = 0.7730014621325435]\n"
+      "2023/11/23, 17:42:00: Tuning LogisticRegression...\n",
+      "2023/11/23, 17:42:11: Tuning for LogisticRegression is finished [F1 score = 0.727211839918564, Accuracy = 0.7808020628767404]\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 18:19:21 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-11-23 17:42:11 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a139e180591b42ef9a929a95f1e33078",
+       "model_id": "2c8292768fec443fb9d2a556f5e72e11",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1283,7 +1292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6016fce5eec48c6a6a2d36ff570ff19",
+       "model_id": "dbf8e021d35e4c49ba83a0525bb69976",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1315,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e60d67e",
+   "id": "f232cda3",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1324,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "cb4c7c08",
+   "id": "71dfd2c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1345,7 +1354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fcf365e",
+   "id": "347b4056",
    "metadata": {},
    "outputs": [
     {
@@ -1958,7 +1967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e95df795",
+   "id": "338c825f",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1967,7 +1976,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ae96132",
+   "id": "ee684eb5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1988,7 +1997,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9101cc76",
+   "id": "17ede2f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2011,7 +2020,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ac7d0d7",
+   "id": "fc29f620",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -2020,7 +2029,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89ff0e98",
+   "id": "26ada891",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2041,7 +2050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "005585f2",
+   "id": "8328d632",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2064,7 +2073,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b89fe796",
+   "id": "2efc0d64",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -2073,7 +2082,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c2194fb9",
+   "id": "4fe9b8c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2094,7 +2103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9d0cc0c",
+   "id": "263e31c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2117,7 +2126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "205f4451",
+   "id": "07d131b9",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -2126,7 +2135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "44282c20",
+   "id": "c683460f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2147,7 +2156,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "51da7a4d",
+   "id": "bcc3e016",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:49:08.358908Z",
@@ -2176,7 +2185,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0eedfb6",
+   "id": "469adc30",
    "metadata": {},
    "outputs": [],
    "source": []
