--- a/notebooks/out_of_domain_uncertainty_poor_income_LR_70K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_poor_income_LR_70K/Income_2018.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5b3189d6",
+   "id": "c58d1995",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233575Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4d151d27",
+   "id": "dc596317",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233805Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a86af9bb",
+   "id": "cb87de77",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233865Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "649e82a2",
+   "id": "9e2585be",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.277478Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e244ed45",
+   "id": "6054aa84",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.277706Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b5267d55",
+   "id": "2930db66",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:21.684861Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "8fad24d4",
+   "id": "98365ca9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:21.694009Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "157e2176",
+   "id": "b0558760",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:22.482933Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec988ffc",
+   "id": "88d53726",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "731a7c75",
+   "id": "01580400",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:24.606024Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "efc0610f",
+   "id": "b188169a",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1fc25639",
+   "id": "63090300",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:24.632107Z",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "057516ba",
+   "id": "89d275c6",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "933202e8",
+   "id": "6c194981",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:25.414123Z",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f4b50f0c",
+   "id": "3a2419fb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:26.176127Z",
@@ -275,8 +275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "aec8ec57",
+   "execution_count": 8,
+   "id": "cb8f10d0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:36.294376Z",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cd3d170",
+   "id": "5e905490",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -312,8 +312,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "6b006926",
+   "execution_count": 9,
+   "id": "6a2e0d87",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:04.449698Z",
@@ -433,7 +433,7 @@
        "4   23   1   1  1760  202    1   1     6    46  45.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,8 +446,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "685d96e8",
+   "execution_count": 10,
+   "id": "3b4bd84e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:04.552046Z",
@@ -461,7 +461,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,8 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "07169f94",
+   "execution_count": 11,
+   "id": "dca700e2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.446590Z",
@@ -593,7 +593,7 @@
        "4   21   1   1  1021  217    1   1     6    33  45.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,8 +606,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "88835bb8",
+   "execution_count": 12,
+   "id": "e69f5722",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.523825Z",
@@ -621,7 +621,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,8 +632,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "500b03a1",
+   "execution_count": 13,
+   "id": "bd7fff9e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.525122Z",
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b734ceab",
+   "id": "9c9d09ae",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca12ab19",
+   "id": "e9ce7dd9",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -663,8 +663,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "39915928",
+   "execution_count": 14,
+   "id": "3ecf203e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.589772Z",
@@ -680,8 +680,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "5b33a54b",
+   "execution_count": 15,
+   "id": "8b5d939f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:10.912300Z",
@@ -702,8 +702,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "bbf30ffb",
+   "execution_count": 16,
+   "id": "acfbf371",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:40:10.165459Z",
@@ -715,7 +715,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-23 04:37:41 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-11-23 17:54:34 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -725,16 +725,18 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.7]',\n",
+      " 'fair_intervention_params_lst': '[0.0]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': '97512376-2490-421c-a1ca-bbdeb46c82b9'}\n"
+      " 'session_uuid': '97512376-2490-421c-a1ca-bbdeb46c82b9'}\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-23 04:37:41 experiment_interface.py INFO    : Start dataset preprocessing\n",
+      "2023-11-23 17:54:34 experiment_interface.py INFO    : Start dataset preprocessing\n",
       "INFO:root:Start dataset preprocessing\n"
      ]
     },
@@ -763,7 +765,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-23 04:37:43 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-11-23 17:54:36 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -779,7 +781,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3dc43ca5c22a465489e7d5cb310a7a0e",
+       "model_id": "7009f088f0064d1c8d849345edcd173a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -794,7 +796,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-23 04:37:43 experiment_interface.py INFO    : Start fairness intervention\n",
+      "2023-11-23 17:54:36 experiment_interface.py INFO    : Start fairness intervention\n",
       "INFO:root:Start fairness intervention\n"
      ]
     },
@@ -802,14 +804,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.7\n"
+      "intervention_param:  0.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-23 04:45:30 experiment_interface.py INFO    : Fairness intervention is completed\n",
+      "2023-11-23 18:02:47 experiment_interface.py INFO    : Fairness intervention is completed\n",
       "INFO:root:Fairness intervention is completed\n"
      ]
     },
@@ -894,8 +896,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.696088</td>\n",
-       "      <td>-0.206936</td>\n",
+       "      <td>0.891672</td>\n",
+       "      <td>0.101823</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25747</th>\n",
@@ -918,8 +920,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.174528</td>\n",
-       "      <td>0.796532</td>\n",
+       "      <td>0.304918</td>\n",
+       "      <td>1.259671</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13795</th>\n",
@@ -990,8 +992,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.565698</td>\n",
-       "      <td>0.179013</td>\n",
+       "      <td>0.761283</td>\n",
+       "      <td>0.487773</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1021,11 +1023,11 @@
        "38923  ...          0.0          0.0          0.0          0.0          0.0   \n",
        "\n",
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
-       "22422          0.0          0.0          0.0   0.696088  -0.206936  \n",
-       "25747          0.0          0.0          0.0   0.174528   0.796532  \n",
+       "22422          0.0          0.0          0.0   0.891672   0.101823  \n",
+       "25747          0.0          0.0          0.0   0.304918   1.259671  \n",
        "13795          0.0          0.0          0.0  -0.933787   0.101823  \n",
        "68724          0.0          0.0          0.0  -0.607812  -2.677012  \n",
-       "38923          0.0          0.0          0.0   0.565698   0.179013  \n",
+       "38923          0.0          0.0          0.0   0.761283   0.487773  \n",
        "\n",
        "[5 rows x 791 columns]"
       ]
@@ -1165,8 +1167,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.370113</td>\n",
-       "      <td>0.024633</td>\n",
+       "      <td>0.435308</td>\n",
+       "      <td>0.101823</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68724</th>\n",
@@ -1214,7 +1216,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-1.520541</td>\n",
-       "      <td>-1.133214</td>\n",
+       "      <td>-1.056025</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1246,9 +1248,9 @@
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
        "22422          0.0          0.0          0.0   1.282842   0.101823  \n",
        "25747          0.0          0.0          0.0   1.543622  -2.368252  \n",
-       "13795          0.0          0.0          0.0   0.370113   0.024633  \n",
+       "13795          0.0          0.0          0.0   0.435308   0.101823  \n",
        "68724          0.0          0.0          0.0  -1.455346  -0.670075  \n",
-       "38923          0.0          0.0          0.0  -1.520541  -1.133214  \n",
+       "38923          0.0          0.0          0.0  -1.520541  -1.056025  \n",
        "\n",
        "[5 rows x 791 columns]"
       ]
@@ -1260,22 +1262,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/11/23, 04:45:30: Tuning LogisticRegression...\n",
-      "2023/11/23, 04:47:09: Tuning for LogisticRegression is finished [F1 score = 0.7586242739990129, Accuracy = 0.8061429082874909]\n"
+      "2023/11/23, 18:02:47: Tuning LogisticRegression...\n",
+      "2023/11/23, 18:04:27: Tuning for LogisticRegression is finished [F1 score = 0.7616136348117589, Accuracy = 0.8082000505332373]\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-23 04:47:09 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-11-23 18:04:27 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0c1e56fb500f4a55ab07bfcba4370470",
+       "model_id": "f1fe110616b44a3dabcb92857c86d710",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1289,7 +1292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fbe2c6f7e3554d09b556db662e17e003",
+       "model_id": "91d4f0d6f5b748a2b9c60fe1eccd3f04",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1321,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab846d9a",
+   "id": "f7adba00",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1330,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "bd364ef6",
+   "id": "644838ab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1352,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4f70b944",
+   "id": "ee4c0fe1",
    "metadata": {},
    "outputs": [
     {
@@ -1959,7 +1962,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e864b79c",
+   "id": "93c264d6",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1968,7 +1971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "927bb089",
+   "id": "14405c49",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1990,7 +1993,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "68ff153d",
+   "id": "013db8b3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2013,7 +2016,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9c4914d",
+   "id": "3cf3daf4",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -2022,7 +2025,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "410227d7",
+   "id": "e0201ff0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2044,7 +2047,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "189e57ea",
+   "id": "dc10b027",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2067,7 +2070,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7699bfa",
+   "id": "58cec193",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -2076,7 +2079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dd9c570c",
+   "id": "00c6466e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2098,7 +2101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37480ee7",
+   "id": "4a6663dc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2121,7 +2124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d03c9dee",
+   "id": "87100c50",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -2130,7 +2133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b0789c7",
+   "id": "d7f70ed8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2152,7 +2155,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "0d1544fc",
+   "id": "61bdf090",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:49:08.358908Z",
@@ -2181,7 +2184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1528558",
+   "id": "270bf9b0",
    "metadata": {},
    "outputs": [],
    "source": []
