--- a/notebooks/out_of_domain_uncertainty_poor_income_LR_90K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_poor_income_LR_90K/Income_2018.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "00bde77b",
+   "id": "3d776df2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233575Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4d121d84",
+   "id": "94c298fa",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233805Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a54baf1b",
+   "id": "682df5de",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233865Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "71fe35f8",
+   "id": "2e565030",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.277478Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2ef61cb9",
+   "id": "c7e1754a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.277706Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6baf692e",
+   "id": "6e14bde9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:21.684861Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "29625939",
+   "id": "e321e531",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:21.694009Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fb93fcf4",
+   "id": "f20c8f82",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:22.482933Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "20a4a7b6",
+   "id": "2ab0e1f5",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "96ffd9be",
+   "id": "d42fdf6f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:24.606024Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29c3438b",
+   "id": "1ca2d9aa",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "11cf7938",
+   "id": "dd95ec1c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:24.632107Z",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2f34ff7",
+   "id": "0bc4ca84",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3fca080b",
+   "id": "7d24f7bf",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:25.414123Z",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "2e1d46d3",
+   "id": "475680e4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:26.176127Z",
@@ -275,8 +275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "e986b0dc",
+   "execution_count": 8,
+   "id": "51206ed5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:36.294376Z",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71be6c41",
+   "id": "2d27cec8",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -312,8 +312,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "e2f11893",
+   "execution_count": 9,
+   "id": "00b323d6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:04.449698Z",
@@ -433,7 +433,7 @@
        "4   23   1   1  1760  202    1   1     6    46  45.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,8 +446,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "31885450",
+   "execution_count": 10,
+   "id": "cbfe87ba",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:04.552046Z",
@@ -461,7 +461,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,8 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "f3a63fb7",
+   "execution_count": 11,
+   "id": "82dbfaf4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.446590Z",
@@ -593,7 +593,7 @@
        "4   21   1   1  1021  217    1   1     6    33  45.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,8 +606,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "6846cc59",
+   "execution_count": 12,
+   "id": "37382577",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.523825Z",
@@ -621,7 +621,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,8 +632,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "de081345",
+   "execution_count": 13,
+   "id": "313743a3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.525122Z",
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5823537c",
+   "id": "0499a028",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee037130",
+   "id": "fe8a2bfb",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -663,8 +663,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "6a9d729e",
+   "execution_count": 14,
+   "id": "47d5e4d0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.589772Z",
@@ -680,8 +680,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "aeb3b9ee",
+   "execution_count": 15,
+   "id": "7ce5ab83",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:10.912300Z",
@@ -702,8 +702,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "1d46d073",
+   "execution_count": 16,
+   "id": "f834f9f5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:40:10.165459Z",
@@ -715,7 +715,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-23 04:41:21 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-11-23 18:16:36 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -725,16 +725,18 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.7]',\n",
+      " 'fair_intervention_params_lst': '[0.0]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'cc201523-93eb-4e2e-84f9-eec31ffe0d0a'}\n"
+      " 'session_uuid': 'cc201523-93eb-4e2e-84f9-eec31ffe0d0a'}\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-23 04:41:21 experiment_interface.py INFO    : Start dataset preprocessing\n",
+      "2023-11-23 18:16:36 experiment_interface.py INFO    : Start dataset preprocessing\n",
       "INFO:root:Start dataset preprocessing\n"
      ]
     },
@@ -763,7 +765,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-23 04:41:23 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-11-23 18:16:38 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -779,7 +781,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "843a7d643e3540ef9c89477c735f7442",
+       "model_id": "9a5188ffcef14c02a29d0c86e9cc1b59",
        "version_major": 2,
        "version_minor": 0
       },
@@ -794,7 +796,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-23 04:41:23 experiment_interface.py INFO    : Start fairness intervention\n",
+      "2023-11-23 18:16:38 experiment_interface.py INFO    : Start fairness intervention\n",
       "INFO:root:Start fairness intervention\n"
      ]
     },
@@ -802,14 +804,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.7\n"
+      "intervention_param:  0.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-23 04:51:03 experiment_interface.py INFO    : Fairness intervention is completed\n",
+      "2023-11-23 18:26:53 experiment_interface.py INFO    : Fairness intervention is completed\n",
       "INFO:root:Fairness intervention is completed\n"
      ]
     },
@@ -894,8 +896,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.694994</td>\n",
-       "      <td>-0.206602</td>\n",
+       "      <td>0.890417</td>\n",
+       "      <td>0.102563</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25747</th>\n",
@@ -918,8 +920,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.173864</td>\n",
-       "      <td>0.798183</td>\n",
+       "      <td>0.304146</td>\n",
+       "      <td>1.261930</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13795</th>\n",
@@ -990,8 +992,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.564711</td>\n",
-       "      <td>0.179854</td>\n",
+       "      <td>0.760135</td>\n",
+       "      <td>0.489019</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1021,11 +1023,11 @@
        "38923  ...          0.0          0.0          0.0          0.0          0.0   \n",
        "\n",
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
-       "22422          0.0          0.0          0.0   0.694994  -0.206602  \n",
-       "25747          0.0          0.0          0.0   0.173864   0.798183  \n",
+       "22422          0.0          0.0          0.0   0.890417   0.102563  \n",
+       "25747          0.0          0.0          0.0   0.304146   1.261930  \n",
        "13795          0.0          0.0          0.0  -0.933536   0.102563  \n",
        "68724          0.0          0.0          0.0  -0.607830  -2.679920  \n",
-       "38923          0.0          0.0          0.0   0.564711   0.179854  \n",
+       "38923          0.0          0.0          0.0   0.760135   0.489019  \n",
        "\n",
        "[5 rows x 795 columns]"
       ]
@@ -1165,8 +1167,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.369288</td>\n",
-       "      <td>0.025272</td>\n",
+       "      <td>0.434429</td>\n",
+       "      <td>0.102563</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68724</th>\n",
@@ -1214,7 +1216,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-1.519807</td>\n",
-       "      <td>-1.134096</td>\n",
+       "      <td>-1.056805</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1246,9 +1248,9 @@
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
        "22422          0.0          0.0          0.0   1.281264   0.102563  \n",
        "25747          0.0          0.0          0.0   1.541829  -2.370755  \n",
-       "13795          0.0          0.0          0.0   0.369288   0.025272  \n",
+       "13795          0.0          0.0          0.0   0.434429   0.102563  \n",
        "68724          0.0          0.0          0.0  -1.454666  -0.670349  \n",
-       "38923          0.0          0.0          0.0  -1.519807  -1.134096  \n",
+       "38923          0.0          0.0          0.0  -1.519807  -1.056805  \n",
        "\n",
        "[5 rows x 795 columns]"
       ]
@@ -1260,22 +1262,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/11/23, 04:51:03: Tuning LogisticRegression...\n",
-      "2023/11/23, 04:53:43: Tuning for LogisticRegression is finished [F1 score = 0.7594348472978473, Accuracy = 0.8068333333333334]\n"
+      "2023/11/23, 18:26:53: Tuning LogisticRegression...\n",
+      "2023/11/23, 18:29:27: Tuning for LogisticRegression is finished [F1 score = 0.7616450311918367, Accuracy = 0.8083444444444444]\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-23 04:53:43 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-11-23 18:29:27 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8581ff1f41734b1d95f18d522d85c57a",
+       "model_id": "ce969aa564d847be87cdece87f28d245",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1289,7 +1292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "99a30e2ea0d54b25af8901ec461caec8",
+       "model_id": "b8427f8e5e3f40f393254353452b1319",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1321,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79756c4b",
+   "id": "edf78ea2",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1330,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "577034d7",
+   "id": "669a91e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1352,7 +1355,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "1394e39f",
+   "id": "436572b5",
    "metadata": {},
    "outputs": [
     {
@@ -1959,7 +1962,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb8e5e63",
+   "id": "2cd8fd1b",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1968,7 +1971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f1e220e1",
+   "id": "9fbcd1ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1990,7 +1993,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0b94fea",
+   "id": "31bacb6b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2013,7 +2016,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75342786",
+   "id": "f0ee5dc8",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -2022,7 +2025,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f4322db8",
+   "id": "3fa44ab5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2044,7 +2047,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2332ade5",
+   "id": "b4bff041",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2067,7 +2070,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21ab0a36",
+   "id": "aeba8ecf",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -2076,7 +2079,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "060dcbd9",
+   "id": "28fdb713",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2098,7 +2101,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "864f3895",
+   "id": "a63ce9f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2121,7 +2124,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd7e6d0f",
+   "id": "fb0149d6",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -2130,7 +2133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22acc14e",
+   "id": "51e38364",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2152,7 +2155,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e765c9b4",
+   "id": "ac0244bd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:49:08.358908Z",
@@ -2181,7 +2184,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8d15011d",
+   "id": "5c004b73",
    "metadata": {},
    "outputs": [],
    "source": []
