--- a/notebooks/out_of_domain_uncertainty_rich_income_LR_10K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income_LR_10K/Income_2018.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e5d02839",
+   "id": "6918a696",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270469Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "9e537c35",
+   "id": "22516262",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270732Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "51013879",
+   "id": "f73086ef",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270792Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "50f1e6d5",
+   "id": "36c9fec6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270840Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "06f07fd4",
+   "id": "44435251",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270874Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cfeb4486",
+   "id": "dfc27f32",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.069492Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f7effd95",
+   "id": "d413762c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.078509Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "75afdb3b",
+   "id": "67b61c0c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.090848Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bb5d01c6",
+   "id": "cf66324e",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ece13b5c",
+   "id": "d1df32ac",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:59.494619Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2922cf4",
+   "id": "0a5ce676",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d0ac52c2",
+   "id": "7fdb15ad",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:59.520955Z",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "861398d3",
+   "id": "5041713c",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "7f31c8c5",
+   "id": "92d9aab4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:00.348893Z",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4b6bb37d",
+   "id": "e3c89152",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:01.513908Z",
@@ -275,8 +275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "6f4e315a",
+   "execution_count": 8,
+   "id": "ee3f2287",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:23.962524Z",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "109a07fa",
+   "id": "2e686d17",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -312,8 +312,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "224c4ed7",
+   "execution_count": 9,
+   "id": "e56ea764",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:29.420462Z",
@@ -433,7 +433,7 @@
        "4   23   1   1  1760  202    1   1     6    46  45.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,8 +446,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "edf97b3c",
+   "execution_count": 10,
+   "id": "86123255",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:29.487761Z",
@@ -461,7 +461,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,8 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "90ad95f5",
+   "execution_count": 11,
+   "id": "f30b020c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.385057Z",
@@ -593,7 +593,7 @@
        "4   21   1   1  1021  217    1   1     6    33  45.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,8 +606,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "f715c3e4",
+   "execution_count": 12,
+   "id": "88727787",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.455677Z",
@@ -621,7 +621,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,8 +632,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "cb92cb6a",
+   "execution_count": 13,
+   "id": "877214bb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.482843Z",
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90979a60",
+   "id": "7d185119",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5bc671e2",
+   "id": "0a1e15d7",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -663,8 +663,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "bae5ff09",
+   "execution_count": 14,
+   "id": "c2dfa0b6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.490077Z",
@@ -680,8 +680,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "a65d9e4d",
+   "execution_count": 15,
+   "id": "7886217a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.542401Z",
@@ -702,8 +702,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "e62e3d8e",
+   "execution_count": 16,
+   "id": "aa619345",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:29:42.911821Z",
@@ -715,7 +715,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 17:01:46 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-11-23 17:51:08 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -725,16 +725,18 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.7]',\n",
+      " 'fair_intervention_params_lst': '[0.0]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'ef323312-150b-4ae3-a96d-a3314ae6525f'}\n"
+      " 'session_uuid': 'ef323312-150b-4ae3-a96d-a3314ae6525f'}\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 17:01:46 experiment_interface.py INFO    : Start dataset preprocessing\n",
+      "2023-11-23 17:51:08 experiment_interface.py INFO    : Start dataset preprocessing\n",
       "INFO:root:Start dataset preprocessing\n"
      ]
     },
@@ -763,7 +765,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 17:01:46 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-11-23 17:51:09 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -779,7 +781,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0bd9c7d50654bcd964d96554f71bd16",
+       "model_id": "fab0a2c7123f4166a3485661e4bcf81c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -794,7 +796,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 17:01:46 experiment_interface.py INFO    : Start fairness intervention\n",
+      "2023-11-23 17:51:09 experiment_interface.py INFO    : Start fairness intervention\n",
       "INFO:root:Start fairness intervention\n"
      ]
     },
@@ -802,14 +804,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.7\n"
+      "intervention_param:  0.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 17:03:59 experiment_interface.py INFO    : Fairness intervention is completed\n",
+      "2023-11-23 17:53:22 experiment_interface.py INFO    : Fairness intervention is completed\n",
       "INFO:root:Fairness intervention is completed\n"
      ]
     },
@@ -942,8 +944,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.334687</td>\n",
-       "      <td>0.072917</td>\n",
+       "      <td>0.399515</td>\n",
+       "      <td>0.148651</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68724</th>\n",
@@ -991,7 +993,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-1.545324</td>\n",
-       "      <td>-1.063095</td>\n",
+       "      <td>-0.987361</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1023,9 +1025,9 @@
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
        "22422          0.0          0.0          0.0   1.242279   0.148651  \n",
        "25747          0.0          0.0          0.0   1.501591  -2.274840  \n",
-       "13795          0.0          0.0          0.0   0.334687   0.072917  \n",
+       "13795          0.0          0.0          0.0   0.399515   0.148651  \n",
        "68724          0.0          0.0          0.0  -1.480496  -0.608690  \n",
-       "38923          0.0          0.0          0.0  -1.545324  -1.063095  \n",
+       "38923          0.0          0.0          0.0  -1.545324  -0.987361  \n",
        "\n",
        "[5 rows x 730 columns]"
       ]
@@ -1117,8 +1119,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.658827</td>\n",
-       "      <td>-0.154286</td>\n",
+       "      <td>0.853311</td>\n",
+       "      <td>0.148651</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25747</th>\n",
@@ -1141,8 +1143,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.140203</td>\n",
-       "      <td>0.830258</td>\n",
+       "      <td>0.269859</td>\n",
+       "      <td>1.284662</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13795</th>\n",
@@ -1213,8 +1215,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.529171</td>\n",
-       "      <td>0.224385</td>\n",
+       "      <td>0.723655</td>\n",
+       "      <td>0.527321</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1244,11 +1246,11 @@
        "38923  ...          0.0          0.0          0.0          0.0          0.0   \n",
        "\n",
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
-       "22422          0.0          0.0          0.0   0.658827  -0.154286  \n",
-       "25747          0.0          0.0          0.0   0.140203   0.830258  \n",
+       "22422          0.0          0.0          0.0   0.853311   0.148651  \n",
+       "25747          0.0          0.0          0.0   0.269859   1.284662  \n",
        "13795          0.0          0.0          0.0  -0.961872   0.148651  \n",
        "68724          0.0          0.0          0.0  -0.637732  -2.577777  \n",
-       "38923          0.0          0.0          0.0   0.529171   0.224385  \n",
+       "38923          0.0          0.0          0.0   0.723655   0.527321  \n",
        "\n",
        "[5 rows x 730 columns]"
       ]
@@ -1260,22 +1262,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/11/13, 17:03:59: Tuning LogisticRegression...\n",
-      "2023/11/13, 17:04:35: Tuning for LogisticRegression is finished [F1 score = 0.8025176529578001, Accuracy = 0.8027005459994111]\n"
+      "2023/11/23, 17:53:22: Tuning LogisticRegression...\n",
+      "2023/11/23, 17:54:05: Tuning for LogisticRegression is finished [F1 score = 0.8058019163732953, Accuracy = 0.8060004860714026]\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 17:04:35 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-11-23 17:54:05 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "79f31d2128704cf8a9ddd3a806069279",
+       "model_id": "780c8c112c1840b0b6d1fd7f1876e49a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1289,7 +1292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e7b56988f5da45e7aff9e351ccda8ef0",
+       "model_id": "72d47c8b5afc4a3884ad60dba5ed2fef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1321,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aff95e0c",
+   "id": "926b330e",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1330,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "f994bc89",
+   "id": "bea98a20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1351,7 +1354,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "43ad7bbf",
+   "id": "e4b30471",
    "metadata": {},
    "outputs": [
     {
@@ -2427,7 +2430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df1ebe0b",
+   "id": "77f79003",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -2436,7 +2439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ab30450",
+   "id": "70d836ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2457,7 +2460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d1a4842",
+   "id": "00b03ffd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2480,7 +2483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf20c9a0",
+   "id": "9dd341c2",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -2489,7 +2492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "881ba604",
+   "id": "36e58e5f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2510,7 +2513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d55cfe1",
+   "id": "8704f6b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2533,7 +2536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc9b9d79",
+   "id": "26d0d9db",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -2542,7 +2545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38e5caab",
+   "id": "f382cc11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2563,7 +2566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b0035e3",
+   "id": "41fbce08",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2586,7 +2589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c5bff23",
+   "id": "6f4ef5af",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -2595,7 +2598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9884e5b",
+   "id": "7738df5b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2616,7 +2619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a7d8319",
+   "id": "488d37c2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2640,7 +2643,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "2356db6f",
+   "id": "7cf2670d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:39:24.699770Z",
