--- a/notebooks/out_of_domain_uncertainty_rich_income_LR_30K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income_LR_30K/Income_2018.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "622615be",
+   "id": "f02a379d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270469Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3106e013",
+   "id": "38844255",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270732Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "615c094a",
+   "id": "d92d262c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270792Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ebc87499",
+   "id": "73d8b196",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270840Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "051bd38c",
+   "id": "8dee5fb9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270874Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "f8542c36",
+   "id": "9d456d2b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.069492Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2fd563f7",
+   "id": "80e6eb00",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.078509Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "34726ed5",
+   "id": "a72d617d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.090848Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f4210d0",
+   "id": "4151d79f",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2cf29ca5",
+   "id": "314f423d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:59.494619Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7febfcc6",
+   "id": "047fa3e7",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b9f4692c",
+   "id": "77f6f8dc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:59.520955Z",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae1231ee",
+   "id": "65297f1b",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "bb09c46d",
+   "id": "cf76b342",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:00.348893Z",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "cc08be34",
+   "id": "afdc6734",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:01.513908Z",
@@ -275,8 +275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "2b3affca",
+   "execution_count": 8,
+   "id": "abce65bb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:23.962524Z",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "34688edc",
+   "id": "e7cf6e0a",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -312,8 +312,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "f6a9b68a",
+   "execution_count": 9,
+   "id": "ea1afb38",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:29.420462Z",
@@ -433,7 +433,7 @@
        "4   23   1   1  1760  202    1   1     6    46  45.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,8 +446,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "fd5cd91a",
+   "execution_count": 10,
+   "id": "45c33db1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:29.487761Z",
@@ -461,7 +461,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,8 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "a774dc70",
+   "execution_count": 11,
+   "id": "e689351d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.385057Z",
@@ -593,7 +593,7 @@
        "4   21   1   1  1021  217    1   1     6    33  45.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,8 +606,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "576bb461",
+   "execution_count": 12,
+   "id": "f8f802d7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.455677Z",
@@ -621,7 +621,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,8 +632,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "9814bea5",
+   "execution_count": 13,
+   "id": "9ae6408f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.482843Z",
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f6d09d5",
+   "id": "12df2241",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0eb0af6d",
+   "id": "bceb4baa",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -663,8 +663,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "5801eccb",
+   "execution_count": 14,
+   "id": "73d0f9b9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.490077Z",
@@ -680,8 +680,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "0495022a",
+   "execution_count": 15,
+   "id": "eb8f8f63",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.542401Z",
@@ -702,8 +702,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "fd7bad6b",
+   "execution_count": 16,
+   "id": "bc939e98",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:29:42.911821Z",
@@ -715,7 +715,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 16:35:28 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-11-23 18:04:52 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -725,16 +725,18 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.7]',\n",
+      " 'fair_intervention_params_lst': '[0.0]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': '42b1bd0f-6dbe-479d-906f-902f13ce7049'}\n"
+      " 'session_uuid': '42b1bd0f-6dbe-479d-906f-902f13ce7049'}\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 16:35:28 experiment_interface.py INFO    : Start dataset preprocessing\n",
+      "2023-11-23 18:04:52 experiment_interface.py INFO    : Start dataset preprocessing\n",
       "INFO:root:Start dataset preprocessing\n"
      ]
     },
@@ -763,7 +765,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 16:35:29 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-11-23 18:04:53 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -779,7 +781,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc78d76da4c645ada292f4fed440baab",
+       "model_id": "36ed178fd13e4c2984cfc46be8b1e919",
        "version_major": 2,
        "version_minor": 0
       },
@@ -794,7 +796,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 16:35:29 experiment_interface.py INFO    : Start fairness intervention\n",
+      "2023-11-23 18:04:53 experiment_interface.py INFO    : Start fairness intervention\n",
       "INFO:root:Start fairness intervention\n"
      ]
     },
@@ -802,14 +804,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.7\n"
+      "intervention_param:  0.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 16:39:41 experiment_interface.py INFO    : Fairness intervention is completed\n",
+      "2023-11-23 18:09:06 experiment_interface.py INFO    : Fairness intervention is completed\n",
       "INFO:root:Fairness intervention is completed\n"
      ]
     },
@@ -942,8 +944,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.328909</td>\n",
-       "      <td>0.074163</td>\n",
+       "      <td>0.393823</td>\n",
+       "      <td>0.151363</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68724</th>\n",
@@ -991,7 +993,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-1.553611</td>\n",
-       "      <td>-1.083836</td>\n",
+       "      <td>-1.006636</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1023,9 +1025,9 @@
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
        "22422          0.0          0.0          0.0   1.237711   0.151363  \n",
        "25747          0.0          0.0          0.0   1.497369  -2.319035  \n",
-       "13795          0.0          0.0          0.0   0.328909   0.074163  \n",
+       "13795          0.0          0.0          0.0   0.393823   0.151363  \n",
        "68724          0.0          0.0          0.0  -1.488696  -0.620636  \n",
-       "38923          0.0          0.0          0.0  -1.553611  -1.083836  \n",
+       "38923          0.0          0.0          0.0  -1.553611  -1.006636  \n",
        "\n",
        "[5 rows x 780 columns]"
       ]
@@ -1117,8 +1119,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.653481</td>\n",
-       "      <td>-0.157436</td>\n",
+       "      <td>0.848224</td>\n",
+       "      <td>0.151363</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25747</th>\n",
@@ -1141,8 +1143,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.134165</td>\n",
-       "      <td>0.846163</td>\n",
+       "      <td>0.263994</td>\n",
+       "      <td>1.309363</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13795</th>\n",
@@ -1213,8 +1215,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.523652</td>\n",
-       "      <td>0.228563</td>\n",
+       "      <td>0.718395</td>\n",
+       "      <td>0.537363</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1244,11 +1246,11 @@
        "38923  ...          0.0          0.0          0.0          0.0          0.0   \n",
        "\n",
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
-       "22422          0.0          0.0          0.0   0.653481  -0.157436  \n",
-       "25747          0.0          0.0          0.0   0.134165   0.846163  \n",
+       "22422          0.0          0.0          0.0   0.848224   0.151363  \n",
+       "25747          0.0          0.0          0.0   0.263994   1.309363  \n",
        "13795          0.0          0.0          0.0  -0.969381   0.151363  \n",
        "68724          0.0          0.0          0.0  -0.644808  -2.627835  \n",
-       "38923          0.0          0.0          0.0   0.523652   0.228563  \n",
+       "38923          0.0          0.0          0.0   0.718395   0.537363  \n",
        "\n",
        "[5 rows x 780 columns]"
       ]
@@ -1260,22 +1262,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/11/13, 16:39:41: Tuning LogisticRegression...\n",
-      "2023/11/13, 16:41:20: Tuning for LogisticRegression is finished [F1 score = 0.8089958073664775, Accuracy = 0.8091333333333334]\n"
+      "2023/11/23, 18:09:06: Tuning LogisticRegression...\n",
+      "2023/11/23, 18:10:46: Tuning for LogisticRegression is finished [F1 score = 0.8105531581356634, Accuracy = 0.8107000000000001]\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 16:41:20 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-11-23 18:10:46 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa1dd2a914bb4ef191a7f8b15e6e3fab",
+       "model_id": "e713021b238c4ceab7495f7b3185e90b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1289,7 +1292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "42dc734b0c654f45b9afa540d9163fb0",
+       "model_id": "db17c4d4c2494e0b9fd91beaa385ba30",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1321,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5eedc21e",
+   "id": "a40a7188",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1330,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "3efcc8ab",
+   "id": "eb799764",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1351,7 +1354,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "2306c614",
+   "id": "41608597",
    "metadata": {},
    "outputs": [
     {
@@ -2427,7 +2430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e063897",
+   "id": "791d08fd",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -2436,7 +2439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "658695e2",
+   "id": "abb355cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2457,7 +2460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "93bd246f",
+   "id": "afdb8ab8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2480,7 +2483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06bec650",
+   "id": "ca4b4941",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -2489,7 +2492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "129056cb",
+   "id": "35ec9f88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2510,7 +2513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "56e8dcd7",
+   "id": "0d17b14d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2533,7 +2536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddda965a",
+   "id": "3093e6ca",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -2542,7 +2545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8b3bca8",
+   "id": "de91c29b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2563,7 +2566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd9b51e1",
+   "id": "c98d7efe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2586,7 +2589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4ca73d9",
+   "id": "f4ffa3b8",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -2595,7 +2598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "63e9e915",
+   "id": "abc9d0d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2616,7 +2619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3731eb62",
+   "id": "0ba41444",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2640,7 +2643,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "137d3686",
+   "id": "80c14673",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:39:24.699770Z",
