--- a/notebooks/out_of_domain_uncertainty_rich_income_LR_70K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income_LR_70K/Income_2018.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b2a63115",
+   "id": "d5dc695b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270469Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "02408b89",
+   "id": "aad330c0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270732Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "753b3500",
+   "id": "3ca807dc",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270792Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2aceb044",
+   "id": "7c638352",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270840Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "647cb15f",
+   "id": "a851aa27",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270874Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "99ebb031",
+   "id": "8569706b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.069492Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3caec533",
+   "id": "01771165",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.078509Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a610d33e",
+   "id": "a7e12852",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.090848Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea446f1c",
+   "id": "6d2cdf59",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c3c26e59",
+   "id": "abeff79b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:59.494619Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d65d5e10",
+   "id": "5d0498fc",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6c7b21d8",
+   "id": "fb7ef5b4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:59.520955Z",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb9379e6",
+   "id": "107bcd1c",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3d469558",
+   "id": "5bd0e2e0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:00.348893Z",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "b2f9d84f",
+   "id": "bb48cfff",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:01.513908Z",
@@ -275,8 +275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "edcd0945",
+   "execution_count": 8,
+   "id": "b95dd041",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:23.962524Z",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7ce8f25",
+   "id": "df7ac301",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -312,8 +312,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "50acc4c7",
+   "execution_count": 9,
+   "id": "e636e491",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:29.420462Z",
@@ -433,7 +433,7 @@
        "4   23   1   1  1760  202    1   1     6    46  45.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,8 +446,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "7e239565",
+   "execution_count": 10,
+   "id": "3271ee6d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:29.487761Z",
@@ -461,7 +461,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,8 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "38ed1fdb",
+   "execution_count": 11,
+   "id": "ac071786",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.385057Z",
@@ -593,7 +593,7 @@
        "4   21   1   1  1021  217    1   1     6    33  45.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,8 +606,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "d1937db0",
+   "execution_count": 12,
+   "id": "34dc7150",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.455677Z",
@@ -621,7 +621,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,8 +632,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "f946c661",
+   "execution_count": 13,
+   "id": "53a9a0ef",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.482843Z",
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1118e9c",
+   "id": "b00c2674",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e059891e",
+   "id": "8a4bdd3c",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -663,8 +663,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "94a4e7f9",
+   "execution_count": 14,
+   "id": "455c3877",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.490077Z",
@@ -680,8 +680,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "bdb03111",
+   "execution_count": 15,
+   "id": "439d11de",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.542401Z",
@@ -702,8 +702,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "1aa9b317",
+   "execution_count": 16,
+   "id": "80817729",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:29:42.911821Z",
@@ -715,7 +715,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-23 04:34:31 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-11-23 17:54:19 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -725,16 +725,18 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.7]',\n",
+      " 'fair_intervention_params_lst': '[0.0]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': '20a516c0-8105-40e7-aae1-7ee97a2dea68'}\n"
+      " 'session_uuid': '20a516c0-8105-40e7-aae1-7ee97a2dea68'}\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-23 04:34:31 experiment_interface.py INFO    : Start dataset preprocessing\n",
+      "2023-11-23 17:54:19 experiment_interface.py INFO    : Start dataset preprocessing\n",
       "INFO:root:Start dataset preprocessing\n"
      ]
     },
@@ -763,7 +765,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-23 04:34:33 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-11-23 17:54:21 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -779,7 +781,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8cfa4741124f43308e9463edb17ed073",
+       "model_id": "315094f8848941a586e69117175be254",
        "version_major": 2,
        "version_minor": 0
       },
@@ -794,7 +796,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-23 04:34:33 experiment_interface.py INFO    : Start fairness intervention\n",
+      "2023-11-23 17:54:21 experiment_interface.py INFO    : Start fairness intervention\n",
       "INFO:root:Start fairness intervention\n"
      ]
     },
@@ -802,14 +804,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.7\n"
+      "intervention_param:  0.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-23 04:42:39 experiment_interface.py INFO    : Fairness intervention is completed\n",
+      "2023-11-23 18:02:47 experiment_interface.py INFO    : Fairness intervention is completed\n",
       "INFO:root:Fairness intervention is completed\n"
      ]
     },
@@ -942,8 +944,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.318493</td>\n",
-       "      <td>0.076571</td>\n",
+       "      <td>0.383368</td>\n",
+       "      <td>0.153966</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68724</th>\n",
@@ -991,7 +993,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-1.562895</td>\n",
-       "      <td>-1.084362</td>\n",
+       "      <td>-1.006966</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1023,9 +1025,9 @@
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
        "22422          0.0          0.0          0.0   1.226749   0.153966  \n",
        "25747          0.0          0.0          0.0   1.486251  -2.322689  \n",
-       "13795          0.0          0.0          0.0   0.318493   0.076571  \n",
+       "13795          0.0          0.0          0.0   0.383368   0.153966  \n",
        "68724          0.0          0.0          0.0  -1.498019  -0.619989  \n",
-       "38923          0.0          0.0          0.0  -1.562895  -1.084362  \n",
+       "38923          0.0          0.0          0.0  -1.562895  -1.006966  \n",
        "\n",
        "[5 rows x 803 columns]"
       ]
@@ -1117,8 +1119,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.642870</td>\n",
-       "      <td>-0.155616</td>\n",
+       "      <td>0.837496</td>\n",
+       "      <td>0.153966</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25747</th>\n",
@@ -1141,8 +1143,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.123867</td>\n",
-       "      <td>0.850526</td>\n",
+       "      <td>0.253618</td>\n",
+       "      <td>1.314898</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13795</th>\n",
@@ -1213,8 +1215,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.513119</td>\n",
-       "      <td>0.231362</td>\n",
+       "      <td>0.707746</td>\n",
+       "      <td>0.540944</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1244,11 +1246,11 @@
        "38923  ...          0.0          0.0          0.0          0.0          0.0   \n",
        "\n",
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
-       "22422          0.0          0.0          0.0   0.642870  -0.155616  \n",
-       "25747          0.0          0.0          0.0   0.123867   0.850526  \n",
+       "22422          0.0          0.0          0.0   0.837496   0.153966  \n",
+       "25747          0.0          0.0          0.0   0.253618   1.314898  \n",
        "13795          0.0          0.0          0.0  -0.979016   0.153966  \n",
        "68724          0.0          0.0          0.0  -0.654639  -2.632271  \n",
-       "38923          0.0          0.0          0.0   0.513119   0.231362  \n",
+       "38923          0.0          0.0          0.0   0.707746   0.540944  \n",
        "\n",
        "[5 rows x 803 columns]"
       ]
@@ -1260,22 +1262,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/11/23, 04:42:40: Tuning LogisticRegression...\n",
-      "2023/11/23, 04:44:33: Tuning for LogisticRegression is finished [F1 score = 0.8131068655443908, Accuracy = 0.8131713946181062]\n"
+      "2023/11/23, 18:02:47: Tuning LogisticRegression...\n",
+      "2023/11/23, 18:06:34: Tuning for LogisticRegression is finished [F1 score = 0.8138649733705994, Accuracy = 0.8139285311491177]\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-23 04:44:33 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-11-23 18:06:34 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "715c1721cb4d4d769af375b6c3deb379",
+       "model_id": "a23e49b4f1ff4379ba9c8b5cf9449172",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1289,7 +1292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "469ffb75a1fc4331bf755d75cbd37274",
+       "model_id": "6015c54525424c8fa9d5da8d45f83ca4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1321,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2989504f",
+   "id": "4a8a1dec",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1330,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "32c12310",
+   "id": "5f21f000",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1351,7 +1354,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "a606de26",
+   "id": "26e6549b",
    "metadata": {},
    "outputs": [
     {
@@ -2427,7 +2430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d9f0a14",
+   "id": "6dec55c1",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -2436,7 +2439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d26d587",
+   "id": "b611ebdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2457,7 +2460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "338627e4",
+   "id": "8f492324",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2480,7 +2483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ee3a82b",
+   "id": "ca235702",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -2489,7 +2492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4108b856",
+   "id": "d7ffc23b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2510,7 +2513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6786d557",
+   "id": "efc79266",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2533,7 +2536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81b7b64e",
+   "id": "22f2affa",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -2542,7 +2545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00825da7",
+   "id": "dc96fcda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2563,7 +2566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e857720",
+   "id": "4185c940",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2586,7 +2589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a01d26dd",
+   "id": "1ba6a3ec",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -2595,7 +2598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6f3b77e",
+   "id": "8c90a901",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2616,7 +2619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc959938",
+   "id": "77a18f30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2640,7 +2643,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "cacb1af5",
+   "id": "32981e7d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:39:24.699770Z",
