--- a/notebooks/out_of_domain_uncertainty_poor_income_LR_30K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_poor_income_LR_30K/Income_2018.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1105c706",
+   "id": "19608c01",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233575Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b91c4bb5",
+   "id": "cfc150d0",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233805Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "55cf32ee",
+   "id": "a5d5bf9f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.233865Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f56d7aff",
+   "id": "79931c30",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.277478Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1a1ef0a4",
+   "id": "0458674d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:47:29.277706Z",
@@ -81,24 +81,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "c5bbd1cb",
+   "execution_count": 1,
+   "id": "e17c20ad",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:21.684861Z",
      "start_time": "2023-10-25T12:36:21.348894Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
@@ -107,8 +98,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "47a03660",
+   "execution_count": 2,
+   "id": "c2745741",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:21.694009Z",
@@ -125,8 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "f96b7331",
+   "execution_count": 3,
+   "id": "6db3a7d7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:22.482933Z",
@@ -152,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "53ea8770",
+   "id": "071bfda9",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -160,15 +151,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "494af54a",
+   "execution_count": 4,
+   "id": "3defd20d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:24.606024Z",
      "start_time": "2023-10-25T12:36:23.349841Z"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:root:No module named 'tempeh': LawSchoolGPADataset will be unavailable. To install, run:\n",
+      "pip install 'aif360[LawSchoolGPA]'\n",
+      "WARNING:root:No module named 'tensorflow': AdversarialDebiasing will be unavailable. To install, run:\n",
+      "pip install 'aif360[AdversarialDebiasing]'\n",
+      "WARNING:root:No module named 'tensorflow': AdversarialDebiasing will be unavailable. To install, run:\n",
+      "pip install 'aif360[AdversarialDebiasing]'\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import copy\n",
@@ -184,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "174e195e",
+   "id": "eb2f664d",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -192,8 +196,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "cf1ed81e",
+   "execution_count": 5,
+   "id": "0cb39f8a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:24.632107Z",
@@ -216,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9a0b4536",
+   "id": "807cf2d4",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -224,8 +228,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "ebd1a175",
+   "execution_count": 6,
+   "id": "13aa9184",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:25.414123Z",
@@ -239,7 +243,7 @@
        "'fairness_variance'"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,8 +258,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "b0f2a4a7",
+   "execution_count": 7,
+   "id": "5a28b34f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:26.176127Z",
@@ -271,8 +275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "bae56763",
+   "execution_count": 8,
+   "id": "59820c9c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:36:36.294376Z",
@@ -300,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7beeaa23",
+   "id": "f0e8e128",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -308,8 +312,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "008845ae",
+   "execution_count": 9,
+   "id": "f51d5040",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:04.449698Z",
@@ -429,7 +433,7 @@
        "4   23   1   1  1760  202    1   1     6    46  45.0"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -442,8 +446,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "064165cd",
+   "execution_count": 10,
+   "id": "4805c7a3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:04.552046Z",
@@ -457,7 +461,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -468,8 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "be935804",
+   "execution_count": 11,
+   "id": "be0f3111",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.446590Z",
@@ -589,7 +593,7 @@
        "4   21   1   1  1021  217    1   1     6    33  45.0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,8 +606,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "bedd59d7",
+   "execution_count": 12,
+   "id": "411b4151",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.523825Z",
@@ -617,7 +621,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -628,8 +632,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "d50988f6",
+   "execution_count": 13,
+   "id": "caad0218",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.525122Z",
@@ -643,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "66dc936b",
+   "id": "df988fc7",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -651,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bdfe2de5",
+   "id": "ccf42557",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -659,8 +663,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "e4398136",
+   "execution_count": 14,
+   "id": "d04ea03b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:08.589772Z",
@@ -676,8 +680,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "0dc8eedf",
+   "execution_count": 15,
+   "id": "afc7a5f4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:37:10.912300Z",
@@ -698,8 +702,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "0894dc47",
+   "execution_count": 16,
+   "id": "19fa62e9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:40:10.165459Z",
@@ -711,7 +715,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 16:39:26 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-11-23 18:05:17 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -721,16 +725,18 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.7]',\n",
+      " 'fair_intervention_params_lst': '[0.0]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': '223090a3-0104-489f-8050-92a22bfbd1f6'}\n"
+      " 'session_uuid': '223090a3-0104-489f-8050-92a22bfbd1f6'}\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 16:39:26 experiment_interface.py INFO    : Start dataset preprocessing\n",
+      "2023-11-23 18:05:17 experiment_interface.py INFO    : Start dataset preprocessing\n",
       "INFO:root:Start dataset preprocessing\n"
      ]
     },
@@ -752,24 +758,30 @@
       "In-domain full_df.shape --  (40000, 9)\n",
       "In-domain init_features_df.shape --  (40000, 10)\n",
       "In-domain number of rows in X_train_val --  30000\n",
-      "In-domain number of rows in X_test --  10000\n",
-      "Out-of-domain 1 init_features_df.shape --  (100000, 10)\n",
-      "Out-of-domain 1 number of rows in X_train_val --  0\n",
-      "Out-of-domain 1 number of rows in X_test --  10000\n"
+      "In-domain number of rows in X_test --  10000\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 16:39:27 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-11-23 18:05:18 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out-of-domain 1 init_features_df.shape --  (100000, 10)\n",
+      "Out-of-domain 1 number of rows in X_train_val --  0\n",
+      "Out-of-domain 1 number of rows in X_test --  10000\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a860782e18dc48d496ca62ed9813d538",
+       "model_id": "29c04d56668b420f85144a28be117765",
        "version_major": 2,
        "version_minor": 0
       },
@@ -784,7 +796,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 16:39:27 experiment_interface.py INFO    : Start fairness intervention\n",
+      "2023-11-23 18:05:18 experiment_interface.py INFO    : Start fairness intervention\n",
       "INFO:root:Start fairness intervention\n"
      ]
     },
@@ -792,14 +804,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.7\n"
+      "intervention_param:  0.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 16:43:21 experiment_interface.py INFO    : Fairness intervention is completed\n",
+      "2023-11-23 18:09:10 experiment_interface.py INFO    : Fairness intervention is completed\n",
       "INFO:root:Fairness intervention is completed\n"
      ]
     },
@@ -884,8 +896,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.697633</td>\n",
-       "      <td>-0.207509</td>\n",
+       "      <td>0.893009</td>\n",
+       "      <td>0.102669</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25747</th>\n",
@@ -908,8 +920,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.176631</td>\n",
-       "      <td>0.800569</td>\n",
+       "      <td>0.306881</td>\n",
+       "      <td>1.265835</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13795</th>\n",
@@ -980,8 +992,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.567382</td>\n",
-       "      <td>0.180213</td>\n",
+       "      <td>0.762758</td>\n",
+       "      <td>0.490391</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1011,11 +1023,11 @@
        "38923  ...          0.0          0.0          0.0          0.0          0.0   \n",
        "\n",
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
-       "22422          0.0          0.0          0.0   0.697633  -0.207509  \n",
-       "25747          0.0          0.0          0.0   0.176631   0.800569  \n",
+       "22422          0.0          0.0          0.0   0.893009   0.102669  \n",
+       "25747          0.0          0.0          0.0   0.306881   1.265835  \n",
        "13795          0.0          0.0          0.0  -0.930499   0.102669  \n",
        "68724          0.0          0.0          0.0  -0.604873  -2.688930  \n",
-       "38923          0.0          0.0          0.0   0.567382   0.180213  \n",
+       "38923          0.0          0.0          0.0   0.762758   0.490391  \n",
        "\n",
        "[5 rows x 748 columns]"
       ]
@@ -1155,8 +1167,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.372006</td>\n",
-       "      <td>0.025124</td>\n",
+       "      <td>0.437132</td>\n",
+       "      <td>0.102669</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68724</th>\n",
@@ -1204,7 +1216,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-1.516627</td>\n",
-       "      <td>-1.138042</td>\n",
+       "      <td>-1.060497</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1236,9 +1248,9 @@
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
        "22422          0.0          0.0          0.0   1.283760   0.102669  \n",
        "25747          0.0          0.0          0.0   1.544261  -2.378753  \n",
-       "13795          0.0          0.0          0.0   0.372006   0.025124  \n",
+       "13795          0.0          0.0          0.0   0.437132   0.102669  \n",
        "68724          0.0          0.0          0.0  -1.451501  -0.672775  \n",
-       "38923          0.0          0.0          0.0  -1.516627  -1.138042  \n",
+       "38923          0.0          0.0          0.0  -1.516627  -1.060497  \n",
        "\n",
        "[5 rows x 748 columns]"
       ]
@@ -1250,22 +1262,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/11/13, 16:43:21: Tuning LogisticRegression...\n",
-      "2023/11/13, 16:44:10: Tuning for LogisticRegression is finished [F1 score = 0.7503141745695053, Accuracy = 0.7999]\n"
+      "2023/11/23, 18:09:10: Tuning LogisticRegression...\n",
+      "2023/11/23, 18:09:55: Tuning for LogisticRegression is finished [F1 score = 0.7537779041828743, Accuracy = 0.8023333333333333]\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 16:44:11 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-11-23 18:09:55 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1506a2a3442e4d9387b5a477c467e4a1",
+       "model_id": "75a75c1e133e451b94171a9851b1acd4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1279,7 +1292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4f59362f1f6e457a86cf654f080a488f",
+       "model_id": "3e34652ec9f6428f9d7322da4748fb16",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1311,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77c0a79d",
+   "id": "a5c11f3f",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1320,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "81a0c232",
+   "id": "969423d2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1341,7 +1354,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "4f637693",
+   "id": "bb90c383",
    "metadata": {},
    "outputs": [
     {
@@ -1948,7 +1961,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3f55f36",
+   "id": "d26de4ac",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -1957,7 +1970,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8f584c4",
+   "id": "0ddb046d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1978,7 +1991,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8257bd2b",
+   "id": "0df85c8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2001,7 +2014,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c201f0d1",
+   "id": "8a73b882",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -2010,7 +2023,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ecc3e83",
+   "id": "5c25fd39",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2031,7 +2044,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "82d28f38",
+   "id": "1eacc4d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2054,7 +2067,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ea0d6c98",
+   "id": "3e8272ff",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -2063,7 +2076,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "03e2c01b",
+   "id": "f88747f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2084,7 +2097,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e57bace",
+   "id": "fe70da0f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2107,7 +2120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "37904ca9",
+   "id": "a9969f49",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -2116,7 +2129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8162aa1",
+   "id": "c4f757c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2137,7 +2150,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "afe19278",
+   "id": "5c70e8af",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-22T22:49:08.358908Z",
@@ -2166,7 +2179,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bb930f6",
+   "id": "78b5e89d",
    "metadata": {},
    "outputs": [],
    "source": []
