--- a/notebooks/out_of_domain_uncertainty_rich_income_LR_2K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income_LR_2K/Income_2018.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "29e3e2be",
+   "id": "e67b5b9e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270469Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "bf2c5d2d",
+   "id": "ec0008b3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270732Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "87141636",
+   "id": "3c05b37b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270792Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "557a60c1",
+   "id": "0ab8dbed",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270840Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a4f657d7",
+   "id": "5d8601d9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270874Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c61670ae",
+   "id": "6595cc3e",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.069492Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a43ed2fd",
+   "id": "b58f3590",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.078509Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "e709bb21",
+   "id": "628da025",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.090848Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7080fce",
+   "id": "8f3bae8c",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "97a26588",
+   "id": "6bbb302a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:59.494619Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "602eca47",
+   "id": "a63b4274",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "d0d54f91",
+   "id": "ef7419f8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:59.520955Z",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4e29fd0",
+   "id": "ad8966d9",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "59bb9088",
+   "id": "fc08f48b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:00.348893Z",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "f5488f1d",
+   "id": "b12794de",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:01.513908Z",
@@ -275,8 +275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "05cc819c",
+   "execution_count": 8,
+   "id": "7faf1183",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:23.962524Z",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d85b066a",
+   "id": "259d6e0f",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -312,8 +312,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "1c9f264d",
+   "execution_count": 9,
+   "id": "d8924f7c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:29.420462Z",
@@ -433,7 +433,7 @@
        "4   23   1   1  1760  202    1   1     6    46  45.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,8 +446,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "8a9729c4",
+   "execution_count": 10,
+   "id": "c132f695",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:29.487761Z",
@@ -461,7 +461,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,8 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "6b66b650",
+   "execution_count": 11,
+   "id": "ee2a31a7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.385057Z",
@@ -593,7 +593,7 @@
        "4   21   1   1  1021  217    1   1     6    33  45.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,8 +606,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "96bf3f22",
+   "execution_count": 12,
+   "id": "33e39eab",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.455677Z",
@@ -621,7 +621,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,8 +632,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "f116a07a",
+   "execution_count": 13,
+   "id": "11141386",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.482843Z",
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b57ee598",
+   "id": "f5891ad7",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2584576f",
+   "id": "fbed0336",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -663,8 +663,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "e8dac67e",
+   "execution_count": 14,
+   "id": "301284fe",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.490077Z",
@@ -680,8 +680,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "4143635b",
+   "execution_count": 15,
+   "id": "cac55180",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.542401Z",
@@ -702,8 +702,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "da7c06f9",
+   "execution_count": 16,
+   "id": "39885475",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:29:42.911821Z",
@@ -715,7 +715,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 18:14:09 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-11-23 17:38:09 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -725,16 +725,18 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.7]',\n",
+      " 'fair_intervention_params_lst': '[0.0]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'd2d0e1d6-cb8a-4f6a-8adf-7d6bc25a7024'}\n"
+      " 'session_uuid': 'd2d0e1d6-cb8a-4f6a-8adf-7d6bc25a7024'}\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 18:14:09 experiment_interface.py INFO    : Start dataset preprocessing\n",
+      "2023-11-23 17:38:09 experiment_interface.py INFO    : Start dataset preprocessing\n",
       "INFO:root:Start dataset preprocessing\n"
      ]
     },
@@ -766,14 +768,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 18:14:10 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-11-23 17:38:09 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5866f79622ae48f59d8d39cd132b10e5",
+       "model_id": "f9916d4ce92441bbafffe67a8a1f08be",
        "version_major": 2,
        "version_minor": 0
       },
@@ -788,7 +790,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 18:14:10 experiment_interface.py INFO    : Start fairness intervention\n",
+      "2023-11-23 17:38:09 experiment_interface.py INFO    : Start fairness intervention\n",
       "INFO:root:Start fairness intervention\n"
      ]
     },
@@ -796,14 +798,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.7\n"
+      "intervention_param:  0.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 18:15:04 experiment_interface.py INFO    : Fairness intervention is completed\n",
+      "2023-11-23 17:39:03 experiment_interface.py INFO    : Fairness intervention is completed\n",
       "INFO:root:Fairness intervention is completed\n"
      ]
     },
@@ -936,8 +938,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.313033</td>\n",
-       "      <td>0.048964</td>\n",
+       "      <td>0.377575</td>\n",
+       "      <td>0.124526</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68724</th>\n",
@@ -985,7 +987,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-1.558709</td>\n",
-       "      <td>-1.084463</td>\n",
+       "      <td>-1.008901</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1017,9 +1019,9 @@
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
        "22422          0.0          0.0          0.0   1.216632   0.124526  \n",
        "25747          0.0          0.0          0.0   1.474803  -2.293452  \n",
-       "13795          0.0          0.0          0.0   0.313033   0.048964  \n",
+       "13795          0.0          0.0          0.0   0.377575   0.124526  \n",
        "68724          0.0          0.0          0.0  -1.494166  -0.631092  \n",
-       "38923          0.0          0.0          0.0  -1.558709  -1.084463  \n",
+       "38923          0.0          0.0          0.0  -1.558709  -1.008901  \n",
        "\n",
        "[5 rows x 520 columns]"
       ]
@@ -1111,8 +1113,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.635747</td>\n",
-       "      <td>-0.177721</td>\n",
+       "      <td>0.829375</td>\n",
+       "      <td>0.124526</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25747</th>\n",
@@ -1135,8 +1137,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.119404</td>\n",
-       "      <td>0.804582</td>\n",
+       "      <td>0.248490</td>\n",
+       "      <td>1.257953</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13795</th>\n",
@@ -1207,8 +1209,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.506661</td>\n",
-       "      <td>0.200088</td>\n",
+       "      <td>0.700289</td>\n",
+       "      <td>0.502335</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1238,11 +1240,11 @@
        "38923  ...          0.0          0.0          0.0          0.0          0.0   \n",
        "\n",
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
-       "22422          0.0          0.0          0.0   0.635747  -0.177721  \n",
-       "25747          0.0          0.0          0.0   0.119404   0.804582  \n",
+       "22422          0.0          0.0          0.0   0.829375   0.124526  \n",
+       "25747          0.0          0.0          0.0   0.248490   1.257953  \n",
        "13795          0.0          0.0          0.0  -0.977823   0.124526  \n",
        "68724          0.0          0.0          0.0  -0.655109  -2.595699  \n",
-       "38923          0.0          0.0          0.0   0.506661   0.200088  \n",
+       "38923          0.0          0.0          0.0   0.700289   0.502335  \n",
        "\n",
        "[5 rows x 520 columns]"
       ]
@@ -1254,22 +1256,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/11/13, 18:15:04: Tuning LogisticRegression...\n",
-      "2023/11/13, 18:15:10: Tuning for LogisticRegression is finished [F1 score = 0.7869411573514632, Accuracy = 0.7869968919444181]\n"
+      "2023/11/23, 17:39:03: Tuning LogisticRegression...\n",
+      "2023/11/23, 17:39:07: Tuning for LogisticRegression is finished [F1 score = 0.7884680424647224, Accuracy = 0.7884968926947938]\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 18:15:10 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-11-23 17:39:07 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6eabad634a114c4f9bcd62ede0619db7",
+       "model_id": "c5e95d2c6de2452897b4f8547ba67688",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1283,7 +1286,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7b416b630b0245adbd69c55e88483077",
+       "model_id": "39cc7bd1bb6c48c0b521a2c47a1bf2ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1315,7 +1318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9b58c66",
+   "id": "48075095",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1324,7 +1327,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "0bd759ec",
+   "id": "fe49de31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1345,7 +1348,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "9fce2024",
+   "id": "af9eceaa",
    "metadata": {},
    "outputs": [
     {
@@ -2421,7 +2424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee957953",
+   "id": "951c55cb",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -2430,7 +2433,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "48dd97c0",
+   "id": "3e97bbd6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2451,7 +2454,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf05aa67",
+   "id": "a6db1ab0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2474,7 +2477,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04c55dce",
+   "id": "c4dbda0e",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -2483,7 +2486,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "54f092e2",
+   "id": "d2923254",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2504,7 +2507,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c77852dc",
+   "id": "1f596c96",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2527,7 +2530,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "07a14a38",
+   "id": "c2827efe",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -2536,7 +2539,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ff36c14",
+   "id": "01b1d92b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2557,7 +2560,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ac0960f8",
+   "id": "1b5db886",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2580,7 +2583,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c09376af",
+   "id": "c4d75d96",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -2589,7 +2592,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e38b9e3e",
+   "id": "0f6a7a1b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2610,7 +2613,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32bfe688",
+   "id": "9d977751",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2634,7 +2637,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "07b69ef5",
+   "id": "73ffe4b9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:39:24.699770Z",
