--- a/notebooks/out_of_domain_uncertainty_rich_income_LR_50K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income_LR_50K/Income_2018.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b00c6fa2",
+   "id": "dfd41f67",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270469Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "71155b58",
+   "id": "61be9e0b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270732Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d345997f",
+   "id": "f5b71c7f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270792Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d208b018",
+   "id": "72f2f748",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270840Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "8817ca1c",
+   "id": "ba8584c4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270874Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "32b640fb",
+   "id": "366f6413",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.069492Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "cfe5f0da",
+   "id": "0b7ccc17",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.078509Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d960670e",
+   "id": "2a4f4652",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.090848Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a337a8f0",
+   "id": "70ac8bf6",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d1f8da5d",
+   "id": "d9f10258",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:59.494619Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a53e6a42",
+   "id": "e0b56d7d",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "86882d5c",
+   "id": "9cc3d669",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:59.520955Z",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab65806c",
+   "id": "d6936103",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "42d744a2",
+   "id": "01b166bb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:00.348893Z",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0e29140d",
+   "id": "d86e3ee3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:01.513908Z",
@@ -275,8 +275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "c721ff50",
+   "execution_count": 8,
+   "id": "fa8f7065",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:23.962524Z",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b0dc257",
+   "id": "33bd7966",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -312,8 +312,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "80af249c",
+   "execution_count": 9,
+   "id": "760440d3",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:29.420462Z",
@@ -433,7 +433,7 @@
        "4   23   1   1  1760  202    1   1     6    46  45.0"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,8 +446,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "cf30278c",
+   "execution_count": 10,
+   "id": "1b96d4f1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:29.487761Z",
@@ -461,7 +461,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,8 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "2d9e2e37",
+   "execution_count": 11,
+   "id": "35ebbd98",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.385057Z",
@@ -593,7 +593,7 @@
        "4   21   1   1  1021  217    1   1     6    33  45.0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,8 +606,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "815764e0",
+   "execution_count": 12,
+   "id": "4ca1abd4",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.455677Z",
@@ -621,7 +621,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,8 +632,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "8e576015",
+   "execution_count": 13,
+   "id": "7147fc31",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.482843Z",
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ea1c548",
+   "id": "d2ebe8b2",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7a81b7b",
+   "id": "5933a863",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -663,8 +663,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "12bca18f",
+   "execution_count": 14,
+   "id": "4b030f2f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.490077Z",
@@ -680,8 +680,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "1c18f8fd",
+   "execution_count": 15,
+   "id": "02f8b2cb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.542401Z",
@@ -702,8 +702,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "b6f5b6ef",
+   "execution_count": 16,
+   "id": "4af4911a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:29:42.911821Z",
@@ -715,7 +715,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-16 15:43:17 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-11-23 18:11:25 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -725,16 +725,18 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.7]',\n",
+      " 'fair_intervention_params_lst': '[0.0]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': 'c4fbebec-73df-440a-8cb1-6887b4329a73'}\n"
+      " 'session_uuid': 'c4fbebec-73df-440a-8cb1-6887b4329a73'}\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-16 15:43:17 experiment_interface.py INFO    : Start dataset preprocessing\n",
+      "2023-11-23 18:11:25 experiment_interface.py INFO    : Start dataset preprocessing\n",
       "INFO:root:Start dataset preprocessing\n"
      ]
     },
@@ -763,7 +765,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-16 15:43:18 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-11-23 18:11:27 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
      ]
     },
@@ -779,7 +781,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5581fcc6a9514508b451be076111c875",
+       "model_id": "b1e005146a8f4706a9986f09bdcf3b78",
        "version_major": 2,
        "version_minor": 0
       },
@@ -794,7 +796,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-16 15:43:18 experiment_interface.py INFO    : Start fairness intervention\n",
+      "2023-11-23 18:11:27 experiment_interface.py INFO    : Start fairness intervention\n",
       "INFO:root:Start fairness intervention\n"
      ]
     },
@@ -802,14 +804,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.7\n"
+      "intervention_param:  0.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-16 15:49:39 experiment_interface.py INFO    : Fairness intervention is completed\n",
+      "2023-11-23 18:17:40 experiment_interface.py INFO    : Fairness intervention is completed\n",
       "INFO:root:Fairness intervention is completed\n"
      ]
     },
@@ -942,8 +944,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.322241</td>\n",
-       "      <td>0.073216</td>\n",
+       "      <td>0.387097</td>\n",
+       "      <td>0.150676</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68724</th>\n",
@@ -991,7 +993,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-1.558604</td>\n",
-       "      <td>-1.088692</td>\n",
+       "      <td>-1.011231</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1023,9 +1025,9 @@
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
        "22422          0.0          0.0          0.0   1.230234   0.150676  \n",
        "25747          0.0          0.0          0.0   1.489661  -2.328059  \n",
-       "13795          0.0          0.0          0.0   0.322241   0.073216  \n",
+       "13795          0.0          0.0          0.0   0.387097   0.150676  \n",
        "68724          0.0          0.0          0.0  -1.493747  -0.623929  \n",
-       "38923          0.0          0.0          0.0  -1.558604  -1.088692  \n",
+       "38923          0.0          0.0          0.0  -1.558604  -1.011231  \n",
        "\n",
        "[5 rows x 800 columns]"
       ]
@@ -1117,8 +1119,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.646524</td>\n",
-       "      <td>-0.159166</td>\n",
+       "      <td>0.841094</td>\n",
+       "      <td>0.150676</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25747</th>\n",
@@ -1141,8 +1143,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.127670</td>\n",
-       "      <td>0.847820</td>\n",
+       "      <td>0.257384</td>\n",
+       "      <td>1.312583</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13795</th>\n",
@@ -1213,8 +1215,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.516811</td>\n",
-       "      <td>0.228137</td>\n",
+       "      <td>0.711381</td>\n",
+       "      <td>0.537979</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1244,11 +1246,11 @@
        "38923  ...          0.0          0.0          0.0          0.0          0.0   \n",
        "\n",
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
-       "22422          0.0          0.0          0.0   0.646524  -0.159166  \n",
-       "25747          0.0          0.0          0.0   0.127670   0.847820  \n",
+       "22422          0.0          0.0          0.0   0.841094   0.150676  \n",
+       "25747          0.0          0.0          0.0   0.257384   1.312583  \n",
        "13795          0.0          0.0          0.0  -0.974894   0.150676  \n",
        "68724          0.0          0.0          0.0  -0.650610  -2.637901  \n",
-       "38923          0.0          0.0          0.0   0.516811   0.228137  \n",
+       "38923          0.0          0.0          0.0   0.711381   0.537979  \n",
        "\n",
        "[5 rows x 800 columns]"
       ]
@@ -1260,22 +1262,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/11/16, 15:49:39: Tuning LogisticRegression...\n",
-      "2023/11/16, 15:51:03: Tuning for LogisticRegression is finished [F1 score = 0.8127773797865441, Accuracy = 0.812839989450061]\n"
+      "2023/11/23, 18:17:40: Tuning LogisticRegression...\n",
+      "2023/11/23, 18:20:13: Tuning for LogisticRegression is finished [F1 score = 0.8141390666173088, Accuracy = 0.8141999802509648]\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-16 15:51:03 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-11-23 18:20:13 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "513a9f29de1e466eb72f5bfce1bbce56",
+       "model_id": "fd2a4340a1e34674a27754d19a9c10f9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1289,7 +1292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "441e87a0577f4b9caae6e7d31f395a22",
+       "model_id": "7ca20206c8f8497087d6fcc8ddb8613c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1321,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4cf5a37",
+   "id": "1388b7b7",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1330,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "7be90c17",
+   "id": "7ed51e99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1351,7 +1354,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "4800fdaf",
+   "id": "801dcad8",
    "metadata": {},
    "outputs": [
     {
@@ -2427,7 +2430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d614e5a",
+   "id": "139f81f1",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -2436,7 +2439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b94cf2f1",
+   "id": "af5aa926",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2457,7 +2460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ff22d1a",
+   "id": "392899f0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2480,7 +2483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9e219ba7",
+   "id": "dc8495e3",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -2489,7 +2492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9820099",
+   "id": "09093053",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2510,7 +2513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "303e1a1f",
+   "id": "28bfda9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2533,7 +2536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "447f72bb",
+   "id": "9e0fce21",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -2542,7 +2545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db56c1f4",
+   "id": "f9731d54",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2563,7 +2566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b61cc48",
+   "id": "b9e6ff7d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2586,7 +2589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d979bbaa",
+   "id": "9eae1103",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -2595,7 +2598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a6f1c48",
+   "id": "06aab464",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2616,7 +2619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73481423",
+   "id": "f29cf149",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2640,7 +2643,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "d7a6f1be",
+   "id": "a7ff6393",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:39:24.699770Z",
