--- a/notebooks/out_of_domain_uncertainty_rich_income_LR_5K/Income_2018.ipynb
+++ b/notebooks/out_of_domain_uncertainty_rich_income_LR_5K/Income_2018.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "70a5b1ef",
+   "id": "80072dae",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270469Z",
@@ -18,7 +18,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "43ff7e61",
+   "id": "beda553b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270732Z",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2fae9a4c",
+   "id": "7bf56505",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270792Z",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e0efec53",
+   "id": "49aeb0d1",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270840Z",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "a53e7ed2",
+   "id": "0d81d988",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:37:42.270874Z",
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "300c1461",
+   "id": "a1120db2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.069492Z",
@@ -99,7 +99,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4ad5160b",
+   "id": "3574a8ee",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.078509Z",
@@ -117,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8198b28b",
+   "id": "cf5de1a5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:57.090848Z",
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7741954",
+   "id": "d422450c",
    "metadata": {},
    "source": [
     "## Import dependencies"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f4844a3d",
+   "id": "cc33561f",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:59.494619Z",
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6b24fa6",
+   "id": "0e142b07",
    "metadata": {},
    "source": [
     "## Define Input Variables"
@@ -197,7 +197,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "40ef935d",
+   "id": "62c80f60",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:25:59.520955Z",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9cdb9a4",
+   "id": "d9d1798e",
    "metadata": {},
    "source": [
     "## Define a db writer and custom fields to insert into your database"
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "ba691845",
+   "id": "f2f43149",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:00.348893Z",
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "904be26c",
+   "id": "0b9d5e37",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:01.513908Z",
@@ -275,8 +275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "d7c37596",
+   "execution_count": 8,
+   "id": "ece42364",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:23.962524Z",
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44cb1fbe",
+   "id": "954f8d66",
    "metadata": {},
    "source": [
     "## Initialize custom objects"
@@ -312,8 +312,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "6ae8f3eb",
+   "execution_count": 9,
+   "id": "c86d44a9",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:29.420462Z",
@@ -433,7 +433,7 @@
        "4   23   1   1  1760  202    1   1     6    46  45.0"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -446,8 +446,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "aab5faed",
+   "execution_count": 10,
+   "id": "3a297f46",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:29.487761Z",
@@ -461,7 +461,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,8 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "842ed5d6",
+   "execution_count": 11,
+   "id": "382dcece",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.385057Z",
@@ -593,7 +593,7 @@
        "4   21   1   1  1021  217    1   1     6    33  45.0"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,8 +606,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "6f0f7105",
+   "execution_count": 12,
+   "id": "a6794744",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.455677Z",
@@ -621,7 +621,7 @@
        "(100000, 10)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -632,8 +632,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "885143a5",
+   "execution_count": 13,
+   "id": "ef25c205",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.482843Z",
@@ -647,7 +647,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ae3dba2b",
+   "id": "8e96752b",
    "metadata": {},
    "source": [
     "## Run experiment iterations"
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "11b9550b",
+   "id": "b2a348f1",
    "metadata": {},
    "source": [
     "### Experiment iteration 1"
@@ -663,8 +663,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "03d9d45f",
+   "execution_count": 14,
+   "id": "b4b3d991",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.490077Z",
@@ -680,8 +680,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "5b93e17d",
+   "execution_count": 15,
+   "id": "2b05559b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:26:33.542401Z",
@@ -702,8 +702,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "a815fa00",
+   "execution_count": 16,
+   "id": "8df13f63",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-25T12:29:42.911821Z",
@@ -715,7 +715,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 18:17:06 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
+      "2023-11-23 17:39:59 experiment_interface.py INFO    : Start an experiment iteration for the following custom params:\n",
       "INFO:root:Start an experiment iteration for the following custom params:\n"
      ]
     },
@@ -725,16 +725,18 @@
      "text": [
       "{'dataset_split_seed': 100,\n",
       " 'experiment_iteration': 'Exp_iter_1',\n",
-      " 'fair_intervention_params_lst': '[0.7]',\n",
+      " 'fair_intervention_params_lst': '[0.0]',\n",
       " 'model_init_seed': 100,\n",
-      " 'session_uuid': '0d076c58-648a-4259-963a-97fb6ad00917'}\n"
+      " 'session_uuid': '0d076c58-648a-4259-963a-97fb6ad00917'}\n",
+      "\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 18:17:06 experiment_interface.py INFO    : Start dataset preprocessing\n",
+      "2023-11-23 17:39:59 experiment_interface.py INFO    : Start dataset preprocessing\n",
       "INFO:root:Start dataset preprocessing\n"
      ]
     },
@@ -756,24 +758,30 @@
       "In-domain full_df.shape --  (15000, 9)\n",
       "In-domain init_features_df.shape --  (15000, 10)\n",
       "In-domain number of rows in X_train_val --  5000\n",
-      "In-domain number of rows in X_test --  10000\n",
-      "Out-of-domain 1 init_features_df.shape --  (100000, 10)\n",
-      "Out-of-domain 1 number of rows in X_train_val --  0\n",
-      "Out-of-domain 1 number of rows in X_test --  10000\n"
+      "In-domain number of rows in X_test --  10000\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 18:17:07 experiment_interface.py INFO    : The dataset is preprocessed\n",
+      "2023-11-23 17:40:00 experiment_interface.py INFO    : The dataset is preprocessed\n",
       "INFO:root:The dataset is preprocessed\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Out-of-domain 1 init_features_df.shape --  (100000, 10)\n",
+      "Out-of-domain 1 number of rows in X_train_val --  0\n",
+      "Out-of-domain 1 number of rows in X_test --  10000\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "33401c3f44db4dc48eb8cad4446a832f",
+       "model_id": "a8d8c9152388472fb02fe55bb3ed99ba",
        "version_major": 2,
        "version_minor": 0
       },
@@ -788,7 +796,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 18:17:07 experiment_interface.py INFO    : Start fairness intervention\n",
+      "2023-11-23 17:40:00 experiment_interface.py INFO    : Start fairness intervention\n",
       "INFO:root:Start fairness intervention\n"
      ]
     },
@@ -796,14 +804,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "intervention_param:  0.7\n"
+      "intervention_param:  0.0\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 18:18:43 experiment_interface.py INFO    : Fairness intervention is completed\n",
+      "2023-11-23 17:41:37 experiment_interface.py INFO    : Fairness intervention is completed\n",
       "INFO:root:Fairness intervention is completed\n"
      ]
     },
@@ -936,8 +944,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.325373</td>\n",
-       "      <td>0.067807</td>\n",
+       "      <td>0.390796</td>\n",
+       "      <td>0.143366</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>68724</th>\n",
@@ -985,7 +993,7 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>-1.571885</td>\n",
-       "      <td>-1.065578</td>\n",
+       "      <td>-0.990019</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1017,9 +1025,9 @@
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
        "22422          0.0          0.0          0.0   1.241291   0.143366  \n",
        "25747          0.0          0.0          0.0   1.502981  -2.274521  \n",
-       "13795          0.0          0.0          0.0   0.325373   0.067807  \n",
+       "13795          0.0          0.0          0.0   0.390796   0.143366  \n",
        "68724          0.0          0.0          0.0  -1.506462  -0.612224  \n",
-       "38923          0.0          0.0          0.0  -1.571885  -1.065578  \n",
+       "38923          0.0          0.0          0.0  -1.571885  -0.990019  \n",
        "\n",
        "[5 rows x 673 columns]"
       ]
@@ -1111,8 +1119,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.652487</td>\n",
-       "      <td>-0.158870</td>\n",
+       "      <td>0.848755</td>\n",
+       "      <td>0.143366</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25747</th>\n",
@@ -1135,8 +1143,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.129105</td>\n",
-       "      <td>0.823396</td>\n",
+       "      <td>0.259950</td>\n",
+       "      <td>1.276750</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13795</th>\n",
@@ -1207,8 +1215,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.521641</td>\n",
-       "      <td>0.218925</td>\n",
+       "      <td>0.717909</td>\n",
+       "      <td>0.521160</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1238,11 +1246,11 @@
        "38923  ...          0.0          0.0          0.0          0.0          0.0   \n",
        "\n",
        "       cat__RELP_7  cat__RELP_8  cat__RELP_9  num__AGEP  num__WKHP  \n",
-       "22422          0.0          0.0          0.0   0.652487  -0.158870  \n",
-       "25747          0.0          0.0          0.0   0.129105   0.823396  \n",
+       "22422          0.0          0.0          0.0   0.848755   0.143366  \n",
+       "25747          0.0          0.0          0.0   0.259950   1.276750  \n",
        "13795          0.0          0.0          0.0  -0.983081   0.143366  \n",
        "68724          0.0          0.0          0.0  -0.655967  -2.576757  \n",
-       "38923          0.0          0.0          0.0   0.521641   0.218925  \n",
+       "38923          0.0          0.0          0.0   0.717909   0.521160  \n",
        "\n",
        "[5 rows x 673 columns]"
       ]
@@ -1254,22 +1262,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023/11/13, 18:18:43: Tuning LogisticRegression...\n",
-      "2023/11/13, 18:18:50: Tuning for LogisticRegression is finished [F1 score = 0.7933645593514812, Accuracy = 0.7933994233566253]\n"
+      "2023/11/23, 17:41:37: Tuning LogisticRegression...\n",
+      "2023/11/23, 17:41:47: Tuning for LogisticRegression is finished [F1 score = 0.7947655505836675, Accuracy = 0.7947987833405709]\n",
+      "\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-11-13 18:18:50 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
+      "2023-11-23 17:41:47 experiment_interface.py INFO    : Models are tuned and saved to a file\n",
       "INFO:root:Models are tuned and saved to a file\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "40a3db26d85b43ff969aa8c002b870b0",
+       "model_id": "464492bdc4404db58755bcd429e6f167",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1283,7 +1292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d92dddb76f02491ab1177ccdf62d4941",
+       "model_id": "5414e032932b4b52b5e99d9d6ab3832d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1315,7 +1324,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29cfa9cf",
+   "id": "28647250",
    "metadata": {},
    "source": [
     "### Experiment iteration 2"
@@ -1324,7 +1333,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "038d2fd4",
+   "id": "865b6003",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1345,7 +1354,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "e08c1a04",
+   "id": "fe64c5d0",
    "metadata": {},
    "outputs": [
     {
@@ -2421,7 +2430,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "750c1619",
+   "id": "8f794c39",
    "metadata": {},
    "source": [
     "### Experiment iteration 3"
@@ -2430,7 +2439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "096ff000",
+   "id": "57ae2952",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2451,7 +2460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "85141e7e",
+   "id": "5af3490a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2474,7 +2483,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2af47e0",
+   "id": "1bc5a26d",
    "metadata": {},
    "source": [
     "### Experiment iteration 4"
@@ -2483,7 +2492,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39b1748a",
+   "id": "f8a39d6f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2504,7 +2513,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b284f0fb",
+   "id": "8b4a955e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2527,7 +2536,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da7a2516",
+   "id": "beb404fc",
    "metadata": {},
    "source": [
     "### Experiment iteration 5"
@@ -2536,7 +2545,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4fc05d9",
+   "id": "714c76fc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2557,7 +2566,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ecd120c",
+   "id": "c4f6f46c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2580,7 +2589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2682f05e",
+   "id": "48a86087",
    "metadata": {},
    "source": [
     "### Experiment iteration 6"
@@ -2589,7 +2598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "37eff54e",
+   "id": "8f16c69f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2610,7 +2619,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbeadd2e",
+   "id": "b877f3ff",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2634,7 +2643,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "06810445",
+   "id": "e90b04e6",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-10-21T14:39:24.699770Z",
